Countrys in all Languages

--- a/Language/strings_es.xml
+++ b/Language/strings_es.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.View">View</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filtrar</string>
@@ -19,4 +19,217 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Eliminar</string>
   <string name="Webradio.Dialog.Search.Header">Buscar</string>
+	<string name="Country.Afghanistan">Afganistán</string>
+	<string name="Country.Åland Islands">Islas Åland</string>
+	<string name="Country.Albania">Albania</string>
+	<string name="Country.Algeria">Argelia</string>
+	<string name="Country.American Samoa">Samoa Americana</string>
+	<string name="Country.Andorra">Andorra</string>
+	<string name="Country.Anguilla">Anguila</string>
+	<string name="Country.Antigua and Barbuda">Antigua y Barbuda</string>
+	<string name="Country.Argentina">Argentina</string>
+	<string name="Country.Armenia">Armenia</string>
+	<string name="Country.Aruba">Aruba</string>
+	<string name="Country.Australia">Australia</string>
+	<string name="Country.Austria">Austria</string>
+	<string name="Country.Azerbaijan">Azerbaiyán</string>
+	<string name="Country.Bahrain">Bahrein</string>
+	<string name="Country.Bangladesh">Bangladesh</string>
+	<string name="Country.Barbados">Barbados</string>
+	<string name="Country.Belarus">Bielorrusia</string>
+	<string name="Country.Belgium">Bélgica</string>
+	<string name="Country.Belize">Belice</string>
+	<string name="Country.Belize">Honduras Británica</string>
+	<string name="Country.Benin">Benín</string>
+	<string name="Country.Benin">Dahomey</string>
+	<string name="Country.Bhutan">Bután</string>
+	<string name="Country.Bolivia">Bolivia</string>
+	<string name="Country.Bosnia and Herzegovina">Bosnia y Herzegovina</string>
+	<string name="Country.Botswana">Botswana</string>
+	<string name="Country.Brazil">Brasil</string>
+	<string name="Country.Brunei">Brunei</string>
+	<string name="Country.Bulgaria">Bulgaria</string>
+	<string name="Country.Burkina Faso">Burkina Faso</string>
+	<string name="Country.Burkina Faso">Puuqina Vasu</string>
+	<string name="Country.Burundi">Urundi</string>
+	<string name="Country.Cambodia">Camboya</string>
+	<string name="Country.Cameroon">Camerún</string>
+	<string name="Country.Canada">Canadá</string>
+	<string name="Country.Cape Verde">Cabo Verde</string>
+	<string name="Country.Central African Republic">República Centroafricana</string>
+	<string name="Country.Chad">Chad</string>
+	<string name="Country.Chile">Chile</string>
+	<string name="Country.China">China</string>
+	<string name="Country.Cocos (Keeling) Islands">Islas Cocos</string>
+	<string name="Country.Colombia">Colombia</string>
+	<string name="Country.Comoros">Comoras</string>
+	<string name="Country.Costa Rica">Costa Rica</string>
+	<string name="Country.Côte d'Ivoire">Costa de Marfil</string>
+	<string name="Country.Croatia">Croacia</string>
+	<string name="Country.Cyprus">Chipre</string>
+	<string name="Country.Czech Republic">Chequia</string>
+	<string name="Country.Denmark">Dinamarca</string>
+	<string name="Country.Djibouti">Yibuti</string>
+	<string name="Country.Dominica">Dominica</string>
+	<string name="Country.Dominican Republic">República Dominicana</string>
+	<string name="Country.East Timor">Timor-Leste</string>
+	<string name="Country.Ecuador">Ecuador</string>
+	<string name="Country.Egypt">Egipto</string>
+	<string name="Country.El Salvador">El Salvador</string>
+	<string name="Country.England">Inglaterra</string>
+	<string name="Country.Equatorial Guinea">Guinea Ecuatorial</string>
+	<string name="Country.Eritrea">Eritrea</string>
+	<string name="Country.Estonia">Estonia</string>
+	<string name="Country.Ethiopia">Etiopía</string>
+	<string name="Country.Ethiopia">Abisinia</string>
+	<string name="Country.Falkland Islands">Islas Malvinas</string>
+	<string name="Country.Faroe Islands">Islas Feroe</string>
+	<string name="Country.Fiji">Fiji</string>
+	<string name="Country.Finland">Finlandia</string>
+	<string name="Country.France">Francia</string>
+	<string name="Country.French Guiana">Guayana Francesa</string>
+	<string name="Country.French Polynesia">Polinesia Francesa</string>
+	<string name="Country.French Southern and Antarctic Lands">Tierras Australes y Antárticas Francesas</string>
+	<string name="Country.Gabon">Gabón</string>
+	<string name="Country.Georgia">Georgia</string>
+	<string name="Country.Germany">Alemania</string>
+	<string name="Country.Ghana">Ghana</string>
+	<string name="Country.Greece">Grecia</string>
+	<string name="Country.Greenland">Groenlandia</string>
+	<string name="Country.Grenada">Granada</string>
+	<string name="Country.Guadeloupe">Guadalupe</string>
+	<string name="Country.Guam">Guam</string>
+	<string name="Country.Guatemala">Guatemala</string>
+	<string name="Country.Guinea">Guinea</string>
+	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
+	<string name="Country.Haiti">Haití</string>
+	<string name="Country.Holland">Holanda</string>
+	<string name="Country.Holy See">Santa Sede</string>
+	<string name="Country.Hungary">Hungría</string>
+	<string name="Country.Iceland">Islandia</string>
+	<string name="Country.India">India</string>
+	<string name="Country.Indonesia">Indonesia</string>
+	<string name="Country.Iran">Irán</string>
+	<string name="Country.Ireland">Irlanda</string>
+	<string name="Country.Italy">Italia</string>
+	<string name="Country.Japan">Japón</string>
+	<string name="Country.Jordan">Jordania</string>
+	<string name="Country.Jordan">Transjordania</string>
+	<string name="Country.Kazakhstan">Kazajistán</string>
+	<string name="Country.Korea">Corea</string>
+	<string name="Country.Kuwait"> Kuwait </string>
+	<string name="Country.Kyrgyzstan">Kirguistán</string>
+	<string name="Country.Latvia">Letonia</string>
+	<string name="Country.Lebanon">Líbano</string>
+	<string name="Country.Liberia">Liberia</string>
+	<string name="Country.Libya">Libia</string>
+	<string name="Country.Lithuania">Lituania</string>
+	<string name="Country.Luxembourg">Luxemburgo</string>
+	<string name="Country.Republic of Macedonia">Macedonia</string>
+	<string name="Country.Madagascar">Madagascar</string>
+	<string name="Country.Malawi">Malawi</string>
+	<string name="Country.Malaysia">Malasia</string>
+	<string name="Country.Maldives">Maldivas</string>
+	<string name="Country.Mali">Malí</string>
+	<string name="Country.Marshall Islands">Islas Marshall</string>
+	<string name="Country.Martinique">Martinica</string>
+	<string name="Country.Mauritania">Mauritania</string>
+	<string name="Country.Mauritius">Mauricio</string>
+	<string name="Country.Mayotte">Mayotte</string>
+	<string name="Country.Mexico">México</string>
+	<string name="Country.Federated States of Micronesia">Micronesia</string>
+	<string name="Country.Moldova">Moldavia</string>
+	<string name="Country.Monaco">Mónaco</string>
+	<string name="Country.Mongolia">Mongolia</string>
+	<string name="Country.Montenegro">Montenegro</string>
+	<string name="Country.Morocco">Marruecos</string>
+	<string name="Country.Myanmar">Myanmar</string>
+	<string name="Country.Myanmar">Birmania</string>
+	<string name="Country.Namibia">Namibia</string>
+	<string name="Country.Nauru">Nauru</string>
+	<string name="Country.Nepal">Nepal</string>
+	<string name="Country.Netherlands Antilles">Antillas Holandesas</string>
+	<string name="Country.Netherlands">Países Bajos</string>
+	<string name="Country.New Caledonia">Nueva Caledonia</string>
+	<string name="Country.New Zealand">Nueva Zelanda</string>
+	<string name="Country.Nicaragua">Nicaragua</string>
+	<string name="Country.Niger">Níger</string>
+	<string name="Country.Nigeria">Nigeria</string>
+	<string name="Country.Niue">Niue</string>
+	<string name="Country.North Korea">Corea del Norte</string>
+	<string name="Country.Norway">Noruega</string>
+	<string name="Country.Oman">Omán</string>
+	<string name="Country.Pakistan">Pakistán</string>
+	<string name="Country.Palestinian territories">Palestina</string>
+	<string name="Country.Panama">Panamá</string>
+	<string name="Country.Papua New Guinea">Papúa Nueva Guinea</string>
+	<string name="Country.Paraguay">Paraguay</string>
+	<string name="Country.Peru">Perú</string>
+	<string name="Country.Philippines">Filipinas</string>
+	<string name="Country.Poland">Polonia</string>
+	<string name="Country.Portugal">Portugal</string>
+	<string name="Country.Monaco">Principado de Mónaco</string>
+	<string name="Country.Puerto Rico">Puerto Rico</string>
+	<string name="Country.Qatar">Qatar</string>
+	<string name="Country.Romania">Rumania</string>
+	<string name="Country.Russia">Rusia</string>
+	<string name="Country.Rwanda">Ruanda</string>
+	<string name="Country.Saint Kitts and Nevis">San Cristóbal y Nieves</string>
+	<string name="Country.Saint Lucia">Santa Lucía</string>
+	<string name="Country.Saint Vincent and the Grenadines">San Vicente y las Granadinas</string>
+	<string name="Country.Samoa">Samoa</string>
+	<string name="Country.San Marino">San Marino</string>
+	<string name="Country.São Tomé and Príncipe">Santo Tomé y Príncipe</string>
+	<string name="Country.Saudi Arabia">Arabia Saudita</string>
+	<string name="Country.Scotland">Escocia</string>
+	<string name="Country.Senegal">Senegal</string>
+	<string name="Country.Serbia">Serbia</string>
+	<string name="Country.Seychelles">Seychelles</string>
+	<string name="Country.Sierra Leone">Sierra Leona</string>
+	<string name="Country.Singapore">Singapur</string>
+	<string name="Country.Slovakia">Eslovaquia</string>
+	<string name="Country.Slovenia">Eslovenia</string>
+	<string name="Country.Solomon Islands">Islas Salomón</string>
+	<string name="Country.Somalia">Somalia</string>
+	<string name="Country.South Africa">Sudáfrica</string>
+	<string name="Country.South Korea">Corea del Sur</string>
+	<string name="Country.South Ossetia">República de Osetia del Sur</string>
+	<string name="Country.Spain">España</string>
+	<string name="Country.Sri Lanka">Sri Lanka</string>
+	<string name="Country.Sudan">Sudán</string>
+	<string name="Country.Suriname">Suriname</string>
+	<string name="Country.Swaziland">Swazilandia</string>
+	<string name="Country.Sweden">Suecia</string>
+	<string name="Country.Switzerland">Suiza</string>
+	<string name="Country.Syria">Siria</string>
+	<string name="Country.Free Area of the Republic of China">Taiwán</string>
+	<string name="Country.Tajikistan">Tayikistán</string>
+	<string name="Country.Tanzania">Tanzania</string>
+	<string name="Country.Thailand">Tailandia</string>
+	<string name="Country.The Gambia">Gambia</string>
+	<string name="Country.Togo">Togo</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Trinidad and Tobago">Trinidad y Tobago</string>
+	<string name="Country.Tunisia">Túnez</string>
+	<string name="Country.Turkey">Turquía</string>
+	<string name="Country.Turkmenistan">Turkmenistán</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Uganda</string>
+	<string name="Country.Ukraine">Ucrania</string>
+	<string name="Country.United Arab Emirates"> Emiratos Árabes Unidos </string>
+	<string name="Country.United Kingdom">Reino Unido</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Reino Unido de la Gran Bretaña e Irlanda del Norte</string>
+	<string name="Country.United States of America">Estados Unidos de América</string>
+	<string name="Country.Uruguay">Uruguay</string>
+	<string name="Country.Uzbekistan">Uzbekistán</string>
+	<string name="Country.Vanuatu">Nuevas Hébridas</string>
+	<string name="Country.Vatican City">Vaticano</string>
+	<string name="Country.Venezuela">Venezuela</string>
+	<string name="Country.Vietnam">Vietnam</string>
+	<string name="Country.Wales">Gales</string>
+	<string name="Country.Western Sahara">República Arabe Saharaui Democrática</string>
+	<string name="Country.Western Sahara">Sahara Occidental</string>
+	<string name="Country.Yemen">Yemen</string>
+	<string name="Country.Zambia">Zambia</string>
+	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
