--- a/Language/strings_fi.xml
+++ b/Language/strings_fi.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Suodata</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Suosikit</string>
@@ -18,4 +18,233 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Poista</string>
   <string name="Webradio.Dialog.Search.Header">Haku</string>
+	<string name="Country.Afghanistan">Afganistan</string>
+	<string name="Country.Åland Islands">Ahvenanmaa</string>
+	<string name="Country.Albania">Albania</string>
+	<string name="Country.Algeria">Algeria</string>
+	<string name="Country.American Samoa">Amerikan Samoa</string>
+	<string name="Country.Andorra">Andorra</string>
+	<string name="Country.Anguilla">Anguilla</string>
+	<string name="Country.Antigua and Barbuda">Antigua ja Barbuda</string>
+	<string name="Country.Argentina">Argentiina</string>
+	<string name="Country.Armenia">Armenia</string>
+	<string name="Country.Aruba">Aruba</string>
+	<string name="Country.Australia">Australia</string>
+	<string name="Country.Austria">Itävalta</string>
+	<string name="Country.Azerbaijan">Azerbaidžan</string>
+	<string name="Country.Bahamas">Bahama</string>
+	<string name="Country.Bahrain">Bahrain</string>
+	<string name="Country.Bangladesh">Bangladesh</string>
+	<string name="Country.Barbados">Barbados</string>
+	<string name="Country.Belarus">Valko-Venäjä</string>
+	<string name="Country.Belgium">Belgia</string>
+	<string name="Country.Belize">Belize</string>
+	<string name="Country.Belize">Brittiläinen Honduras</string>
+	<string name="Country.Benin">Benin</string>
+	<string name="Country.Benin">Dahomey</string>
+	<string name="Country.Bermuda">Bermuda</string>
+	<string name="Country.Bhutan">Bhutan</string>
+	<string name="Country.Bolivia">Bolivia</string>
+	<string name="Country.Bosnia and Herzegovina">Bosnia ja Hertsegovina</string>
+	<string name="Country.Botswana">Botswana</string>
+	<string name="Country.Brazil">Brasília</string>
+	<string name="Country.British Virgin Islands">Brittiläiset Neitsytsaaret</string>
+	<string name="Country.Brunei">Brunei</string>
+	<string name="Country.Bulgaria">Bulgaria</string>
+	<string name="Country.Burkina Faso">Burkina Faso</string>
+	<string name="Country.Burkina Faso">Ylä-Volta</string>
+	<string name="Country.Cambodia">Kambodža</string>
+	<string name="Country.Cameroon">Kamerun</string>
+	<string name="Country.Canada">Kanada</string>
+	<string name="Country.Cape Verde">Kap Verde</string>
+	<string name="Country.Cayman Islands">Caymansaaret</string>
+	<string name="Country.Central African Republic">Keski-Afrikan tasavalta</string>
+	<string name="Country.Chad">Tšad</string>
+	<string name="Country.Chile">Chile</string>
+	<string name="Country.China">Kiina</string>
+	<string name="Country.Christmas Island">Joulusaari</string>
+	<string name="Country.Colombia">Kolumbia</string>
+	<string name="Country.Comoros">Komorit</string>
+	<string name="Country.Cook Islands">Cookinsaaret</string>
+	<string name="Country.Costa Rica">Costa Rica</string>
+	<string name="Country.Côte d'Ivoire">Norsunluurannikko</string>
+	<string name="Country.Croatia">Kroatia</string>
+	<string name="Country.Cuba">Kuuba</string>
+	<string name="Country.Cyprus">Kypros</string>
+	<string name="Country.Czech Republic">Tšekki</string>
+	<string name="Country.Denmark">Tanska</string>
+	<string name="Country.Djibouti">Djibouti</string>
+	<string name="Country.Dominica">Dominica</string>
+	<string name="Country.Dominican Republic">Dominikaaninen tasavalta</string>
+	<string name="Country.East Timor">Itä-Timor</string>
+	<string name="Country.Ecuador">Ecuador</string>
+	<string name="Country.Egypt">Egypti</string>
+	<string name="Country.El Salvador">El Salvador</string>
+	<string name="Country.Equatorial Guinea">Päiväntasaajan Guinea</string>
+	<string name="Country.Eritrea">Eritrea</string>
+	<string name="Country.Estonia">Viro</string>
+	<string name="Country.Ethiopia">Etiopia</string>
+	<string name="Country.Ethiopia">Abessinia</string>
+	<string name="Country.Falkland Islands">Falklandinsaaret</string>
+	<string name="Country.Faroe Islands">Färsaaret</string>
+	<string name="Country.Fiji">Fidži</string>
+	<string name="Country.Finland">Suomi</string>
+	<string name="Country.France">Ranska</string>
+	<string name="Country.French Guiana">Ranskan Guayana</string>
+	<string name="Country.French Polynesia">Ranskan Polynesia</string>
+	<string name="Country.French Southern and Antarctic Lands">Ranskan eteläisten ja antarktisten alueiden territorio</string>
+	<string name="Country.Georgia">Georgia</string>
+	<string name="Country.Germany">Saksa</string>
+	<string name="Country.Ghana">Ghana</string>
+	<string name="Country.Greece">Kreikka</string>
+	<string name="Country.Greenland">Grönlanti</string>
+	<string name="Country.Grenada">Grenada</string>
+	<string name="Country.Guadeloupe">Guadeloupe</string>
+	<string name="Country.Guam">Guam</string>
+	<string name="Country.Guatemala">Guatemala</string>
+	<string name="Country.Guinea">Guinea</string>
+	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
+	<string name="Country.Haiti">Haiti</string>
+	<string name="Country.Holland">Hollanti</string>
+	<string name="Country.Holy See">Pyhä istuin</string>
+	<string name="Country.Hong Kong">Hong Kong</string>
+	<string name="Country.Hungary">Unkari</string>
+	<string name="Country.Iceland">Islanti</string>
+	<string name="Country.India">Intia</string>
+	<string name="Country.Indonesia">Indonesia</string>
+	<string name="Country.Iran">Iran</string>
+	<string name="Country.Iran">Persia</string>
+	<string name="Country.Iraq">Irak</string>
+	<string name="Country.Ireland">Irlanti</string>
+	<string name="Country.Italy">Italia</string>
+	<string name="Country.Japan">Japani</string>
+	<string name="Country.Jordan">Jordania</string>
+	<string name="Country.Jordan">Transjordania</string>
+	<string name="Country.Kazakhstan">Kazakstan</string>
+	<string name="Country.Korea">Korea</string>
+	<string name="Country.Kuwait"> Kuwait </string>
+	<string name="Country.Kyrgyzstan">Kirgisia</string>
+	<string name="Country.Latvia">Latvia</string>
+	<string name="Country.Lebanon">Libanon</string>
+	<string name="Country.Lesotho">Lesotho</string>
+	<string name="Country.Liberia">Liberia</string>
+	<string name="Country.Libya">Libya</string>
+	<string name="Country.Lithuania">Liettua</string>
+	<string name="Country.Luxembourg">Luxemburg</string>
+	<string name="Country.Republic of Macedonia">Makedonia</string>
+	<string name="Country.Madagascar">Madagaskar</string>
+	<string name="Country.Malawi">Malawi</string>
+	<string name="Country.Malaysia">Malesia</string>
+	<string name="Country.Maldives">Malediivit</string>
+	<string name="Country.Marshall Islands">Marshallinsaaret</string>
+	<string name="Country.Mauritania">Mauritania</string>
+	<string name="Country.Mauritius">Mauritius</string>
+	<string name="Country.Mayotte">Mayotte</string>
+	<string name="Country.Mexico">Meksiko</string>
+	<string name="Country.Federated States of Micronesia">Mikronesia</string>
+	<string name="Country.Moldova">Moldova</string>
+	<string name="Country.Monaco">Monaco</string>
+	<string name="Country.Mongolia">Mongolia</string>
+	<string name="Country.Montenegro">Montenegro</string>
+	<string name="Country.Montserrat">Montserrat</string>
+	<string name="Country.Morocco">Marokko</string>
+	<string name="Country.Mozambique">Mosambik</string>
+	<string name="Country.Myanmar">Myanmar</string>
+	<string name="Country.Myanmar">Burma</string>
+	<string name="Country.Namibia">Namibia</string>
+	<string name="Country.Nauru">Nauru</string>
+	<string name="Country.Nepal">Nepal</string>
+	<string name="Country.Netherlands Antilles">Alankomaiden Antillit</string>
+	<string name="Country.Netherlands">Alankomaat</string>
+	<string name="Country.New Caledonia">Uusi-Kaledonia</string>
+	<string name="Country.New Zealand">Uusi-Seelanti</string>
+	<string name="Country.Nicaragua">Nicaragua</string>
+	<string name="Country.Niger">Niger</string>
+	<string name="Country.Nigeria">Nigeria</string>
+	<string name="Country.Niue">Niue</string>
+	<string name="Country.Norfolk Island">Norfolkinsaari</string>
+	<string name="Country.North Korea">Pohjois-Korea</string>
+	<string name="Country.Northern Mariana Islands">Pohjois-Mariaanit</string>
+	<string name="Country.Norway">Norja</string>
+	<string name="Country.Pakistan">Pakistan</string>
+	<string name="Country.Palestinian territories">Palestiina</string>
+	<string name="Country.Papua New Guinea">Papua-Uusi-Guinea</string>
+	<string name="Country.Paraguay">Paraguay</string>
+	<string name="Country.Philippines">Filippiinit</string>
+	<string name="Country.Pitcairn Islands">Pitcairn</string>
+	<string name="Country.Poland">Puola</string>
+	<string name="Country.Portugal">Portugali</string>
+	<string name="Country.Monaco">Monacon ruhtinaskunta</string>
+	<string name="Country.Puerto Rico">Puerto Rico</string>
+	<string name="Country.Qatar">Qatar</string>
+	<string name="Country.Réunion">Réunion</string>
+	<string name="Country.Romania">Romania</string>
+	<string name="Country.Russia">Venäjä</string>
+	<string name="Country.Rwanda">Ruanda</string>
+	<string name="Country.Saint Kitts and Nevis">Saint Kitts ja Nevis</string>
+	<string name="Country.Saint Lucia">Saint Lucia</string>
+	<string name="Country.Saint Pierre and Miquelon">Saint-Pierre ja Miquelon</string>
+	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent ja Grenadiinit</string>
+	<string name="Country.Samoa">Samoa</string>
+	<string name="Country.San Marino">San Marino</string>
+	<string name="Country.São Tomé and Príncipe">São Tomé ja Príncipe</string>
+	<string name="Country.Saudi Arabia">Saudi-Arabia</string>
+	<string name="Country.Scotland">Skotlanti</string>
+	<string name="Country.Senegal">Senegal</string>
+	<string name="Country.Serbia">Serbia</string>
+	<string name="Country.Seychelles">Seychellit</string>
+	<string name="Country.Sierra Leone">Sierra Leone</string>
+	<string name="Country.Singapore">Singapore</string>
+	<string name="Country.Slovakia">Slovakia</string>
+	<string name="Country.Slovenia">Slovenia</string>
+	<string name="Country.Solomon Islands">Salomonsaaret</string>
+	<string name="Country.Somalia">Somalia</string>
+	<string name="Country.South Africa">Etelä-Afrikka</string>
+	<string name="Country.South Georgia and South Sandwich Islands">Etelä-Georgia ja Eteläiset Sandwichsaaret</string>
+	<string name="Country.South Korea">Etelä-Korea</string>
+	<string name="Country.South Ossetia">Etelä-Ossetia</string>
+	<string name="Country.Spain">Espanja</string>
+	<string name="Country.Sri Lanka">Sri Lanka</string>
+	<string name="Country.Sri Lanka">Ceylon</string>
+	<string name="Country.Sudan">Sudan</string>
+	<string name="Country.Suriname">Suriname</string>
+	<string name="Country.Swaziland">Swazimaa</string>
+	<string name="Country.Sweden">Ruotsi</string>
+	<string name="Country.Switzerland">Sveitsi</string>
+	<string name="Country.Syria">Syyria</string>
+	<string name="Country.Free Area of the Republic of China">Taiwan</string>
+	<string name="Country.Tajikistan">Tadžikistan</string>
+	<string name="Country.Tanzania">Tansania</string>
+	<string name="Country.Thailand">Thaimaa</string>
+	<string name="Country.Thailand">Siam</string>
+	<string name="Country.The Gambia">Gambia</string>
+	<string name="Country.Togo">Togo</string>
+	<string name="Country.Tokelau Islands">Tokelau</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Transnistria">Transnistria</string>
+	<string name="Country.Trinidad and Tobago">Trinidad ja Tobago</string>
+	<string name="Country.Tunisia">Tunisia</string>
+	<string name="Country.Turkey">Turkki</string>
+	<string name="Country.Northern Cyprus">Pohjois-Kypros</string>
+	<string name="Country.Turkmenistan">Turkmenistan</string>
+	<string name="Country.Turks and Caicos Islands">Turks- ja Caicossaaret</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Uganda</string>
+	<string name="Country.Ukraine">Ukraina</string>
+	<string name="Country.United Arab Emirates"> Arabiemiirikunnat </string>
+	<string name="Country.United Kingdom">Yhdistynyt kuningaskunta</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Ison-Britannian ja Pohjois-Irlannin yhdistynyt kuningaskunta</string>
+	<string name="Country.United States of America">Amerikan yhdysvallat</string>
+	<string name="Country.United States Virgin Islands">Yhdysvaltain Neitsytsaaret</string>
+	<string name="Country.Uruguay">Uruguay</string>
+	<string name="Country.Uzbekistan">Uzbekistan</string>
+	<string name="Country.Vatican City">Vatikaanivaltio</string>
+	<string name="Country.Venezuela">Venezuela</string>
+	<string name="Country.Vietnam">Vietnam</string>
+	<string name="Country.Wales">Wales</string>
+	<string name="Country.Wallis and Futuna">Wallis ja Futuna</string>
+	<string name="Country.Western Sahara">Länsi-Sahara</string>
+	<string name="Country.Yemen">Jemen</string>
+	<string name="Country.Zambia">Sambia</string>
+	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
