--- a/Language/strings_fr.xml
+++ b/Language/strings_fr.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Tri par</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favoris</string>
@@ -18,4 +18,196 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Effacer</string>
   <string name="Webradio.Dialog.Search.Header">Recherche</string>
+	<string name="Country.Afghanistan">Afghanistan</string>
+	<string name="Country.Algeria">Algérie</string>
+	<string name="Country.Andorra">Andorre</string>
+	<string name="Country.Anguilla">Anguilla</string>
+	<string name="Country.Antigua and Barbuda">Antigua-et-Barbuda</string>
+	<string name="Country.Argentina">Argentine</string>
+	<string name="Country.Armenia">Arménie</string>
+	<string name="Country.Aruba">Aruba</string>
+	<string name="Country.Australia">Australie</string>
+	<string name="Country.Austria">Autriche</string>
+	<string name="Country.Azerbaijan">Azerbaïdjan</string>
+	<string name="Country.Bahrain">Bahreïn</string>
+	<string name="Country.Bangladesh">Bangladesh</string>
+	<string name="Country.Barbados">Barbade</string>
+	<string name="Country.Belarus">Biélorussie</string>
+	<string name="Country.Belgium">Belgique</string>
+	<string name="Country.Belize">Belize</string>
+	<string name="Country.Belize">Honduras britannique</string>
+	<string name="Country.Benin">Bénin</string>
+	<string name="Country.Benin">Dahomey</string>
+	<string name="Country.Bhutan">Bhoutan</string>
+	<string name="Country.Bolivia">Bolivie</string>
+	<string name="Country.Bosnia and Herzegovina">Bosnie-Herzégovine</string>
+	<string name="Country.Botswana">Botswana</string>
+	<string name="Country.Brazil">Brésil</string>
+	<string name="Country.Brunei">Brunei</string>
+	<string name="Country.Bulgaria">Bulgarie</string>
+	<string name="Country.Burkina Faso">Burkina Faso</string>
+	<string name="Country.Burkina Faso">Haute-Volta</string>
+	<string name="Country.Cambodia">Cambodge</string>
+	<string name="Country.Cameroon">Cameroun</string>
+	<string name="Country.Canada">Canada</string>
+	<string name="Country.Cape Verde">Cap-Vert</string>
+	<string name="Country.Central African Republic">République centrafricaine</string>
+	<string name="Country.Chad">Tchad</string>
+	<string name="Country.Chile">Chili</string>
+	<string name="Country.China">Chine</string>
+	<string name="Country.Colombia">Colombie</string>
+	<string name="Country.Comoros">Comores</string>
+	<string name="Country.Costa Rica">Costa Rica</string>
+	<string name="Country.Côte d'Ivoire">Côte d'Ivoire</string>
+	<string name="Country.Croatia">Croatie</string>
+	<string name="Country.Cyprus">Chypre</string>
+	<string name="Country.Czech Republic">République tchèque</string>
+	<string name="Country.Denmark">Danemark</string>
+	<string name="Country.Djibouti">Djibouti</string>
+	<string name="Country.Dominican Republic">République dominicaine</string>
+	<string name="Country.East Timor">Timor Oriental</string>
+	<string name="Country.Ecuador">Équateur</string>
+	<string name="Country.Egypt">Égypte</string>
+	<string name="Country.England">Angleterre</string>
+	<string name="Country.Equatorial Guinea">Guinée équatoriale</string>
+	<string name="Country.Eritrea">Érythrée</string>
+	<string name="Country.Estonia">Estonie</string>
+	<string name="Country.Ethiopia">Éthiopie</string>
+	<string name="Country.Ethiopia">Abyssinie</string>
+	<string name="Country.Falkland Islands">Îles Malouines</string>
+	<string name="Country.Faroe Islands">Îles Féroé</string>
+	<string name="Country.Fiji">Fidji</string>
+	<string name="Country.French Guiana">Guyane</string>
+	<string name="Country.French Polynesia">Polynésie française</string>
+	<string name="Country.French Southern and Antarctic Lands">Terres australes et antarctiques françaises</string>
+	<string name="Country.Georgia">Géorgie</string>
+	<string name="Country.Germany">Allemagne</string>
+	<string name="Country.Ghana">Ghana</string>
+	<string name="Country.Greece">Hellade</string>
+	<string name="Country.Greenland">Groenland</string>
+	<string name="Country.Grenada">Grenade</string>
+	<string name="Country.Guam">Guam</string>
+	<string name="Country.Guatemala">Guatemala</string>
+	<string name="Country.Guinea">Guinée</string>
+	<string name="Country.Guinea-Bissau">Guinée-Bissau</string>
+	<string name="Country.Haiti">Haïti</string>
+	<string name="Country.Holland">Hollande</string>
+	<string name="Country.Holy See">Saint-Siège</string>
+	<string name="Country.Hong Kong">Hong Kong</string>
+	<string name="Country.India">Inde</string>
+	<string name="Country.Indonesia">Indonésie</string>
+	<string name="Country.Iran">Iran</string>
+	<string name="Country.Iraq">Irak</string>
+	<string name="Country.Ireland">Irlande</string>
+	<string name="Country.Israel">Israël</string>
+	<string name="Country.Italy">Italie</string>
+	<string name="Country.Jamaica">Jamaïque</string>
+	<string name="Country.Japan">Japon</string>
+	<string name="Country.Jordan">Jordanie</string>
+	<string name="Country.Jordan">Transjordanie</string>
+	<string name="Country.Kazakhstan">Kazakhstan</string>
+	<string name="Country.Kenya">Kenya</string>
+	<string name="Country.Korea">Corée</string>
+	<string name="Country.Kuwait"> Koweït </string>
+	<string name="Country.Kyrgyzstan">Kirghizistan</string>
+	<string name="Country.Latvia">Lettonie</string>
+	<string name="Country.Lesotho">Lesotho</string>
+	<string name="Country.Liberia">Liberia</string>
+	<string name="Country.Libya">Libye</string>
+	<string name="Country.Luxembourg">Luxembourg</string>
+	<string name="Country.Republic of Macedonia">Macédoine</string>
+	<string name="Country.Madagascar">Madagascar</string>
+	<string name="Country.Malawi">Malawi</string>
+	<string name="Country.Malaysia">Malaisie</string>
+	<string name="Country.Malta">Malte</string>
+	<string name="Country.Marshall Islands">Îles Marshall</string>
+	<string name="Country.Mauritania">Mauritanie</string>
+	<string name="Country.Mauritius">Maurice</string>
+	<string name="Country.Mayotte">Mayotte</string>
+	<string name="Country.Mexico">Mexique</string>
+	<string name="Country.Federated States of Micronesia">Micronésie</string>
+	<string name="Country.Monaco">Monaco</string>
+	<string name="Country.Mongolia">Mongolie</string>
+	<string name="Country.Montenegro">Monténégro</string>
+	<string name="Country.Myanmar">Myanmar</string>
+	<string name="Country.Nauru">Nauru</string>
+	<string name="Country.Nepal">Népal</string>
+	<string name="Country.Netherlands">Pays-Bas</string>
+	<string name="Country.New Caledonia">Nouvelle-Calédonie</string>
+	<string name="Country.New Zealand">Nouvelle-Zélande</string>
+	<string name="Country.Nicaragua">Nicaragua</string>
+	<string name="Country.Niger">Niger</string>
+	<string name="Country.Nigeria">Nigeria</string>
+	<string name="Country.Niue">Niue</string>
+	<string name="Country.North Korea">Corée du Nord</string>
+	<string name="Country.Norway">Norvège</string>
+	<string name="Country.Pakistan">Pakistan</string>
+	<string name="Country.Panama">Panamá</string>
+	<string name="Country.Papua New Guinea">Papouasie-Nouvelle-Guinée</string>
+	<string name="Country.Paraguay">Paraguay</string>
+	<string name="Country.Peru">Pérou</string>
+	<string name="Country.Philippines">Philippines</string>
+	<string name="Country.Poland">Pologne</string>
+	<string name="Country.Portugal">Portugal</string>
+	<string name="Country.Monaco">Principauté de Monaco</string>
+	<string name="Country.Qatar">Qatar</string>
+	<string name="Country.Romania">Roumanie</string>
+	<string name="Country.Russia">Russie</string>
+	<string name="Country.Rwanda">Rwanda</string>
+	<string name="Country.Saint Kitts and Nevis">Saint-Christophe-et-Niévès</string>
+	<string name="Country.Saint Lucia">Sainte-Lucie</string>
+	<string name="Country.Saint Vincent and the Grenadines">Saint-Vincent-et-les Grenadines</string>
+	<string name="Country.Samoa">Samoa</string>
+	<string name="Country.San Marino">Saint-Marin</string>
+	<string name="Country.São Tomé and Príncipe">São Tomé-et-Príncipe</string>
+	<string name="Country.Saudi Arabia">Arabie Saoudite</string>
+	<string name="Country.Scotland">Écosse</string>
+	<string name="Country.Senegal">Sénégal</string>
+	<string name="Country.Serbia">Serbie</string>
+	<string name="Country.Seychelles">Seychelles</string>
+	<string name="Country.Sierra Leone">Sierra Leone</string>
+	<string name="Country.Singapore">Singapour</string>
+	<string name="Country.Slovakia">Slovaquie</string>
+	<string name="Country.Slovenia">Slovénie</string>
+	<string name="Country.Solomon Islands">Îles Salomon</string>
+	<string name="Country.Somalia">Somalie</string>
+	<string name="Country.South Africa">Afrique du Sud</string>
+	<string name="Country.South Korea">Corée du Sud</string>
+	<string name="Country.South Ossetia">L'Ossétie du Sud</string>
+	<string name="Country.Spain">Espagne</string>
+	<string name="Country.Sri Lanka">Sri Lanka</string>
+	<string name="Country.Sri Lanka">Ceylan</string>
+	<string name="Country.Sudan">Soudan</string>
+	<string name="Country.Suriname">Suriname</string>
+	<string name="Country.Swaziland">Swaziland</string>
+	<string name="Country.Sweden">Suède</string>
+	<string name="Country.Switzerland">Suisse</string>
+	<string name="Country.Syria">Syrie</string>
+	<string name="Country.Free Area of the Republic of China">Taïwan</string>
+	<string name="Country.Tajikistan">Tadjikistan</string>
+	<string name="Country.Tanzania">Tanzanie</string>
+	<string name="Country.Thailand">Thaïlande</string>
+	<string name="Country.Togo">Togo</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Trinidad and Tobago">Trinité-et-Tobago</string>
+	<string name="Country.Tunisia">Tunisie</string>
+	<string name="Country.Turkey">Turquie</string>
+	<string name="Country.Turkmenistan">Turkménistan</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Ouganda</string>
+	<string name="Country.Ukraine">Ukraine</string>
+	<string name="Country.United Arab Emirates"> Émirats arabes unis </string>
+	<string name="Country.United Kingdom">Royaume-Uni</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Royaume-Uni de Grande-Bretagne et d'Irlande du Nord</string>
+	<string name="Country.United States of America">États-Unis d'Amérique</string>
+	<string name="Country.Uruguay">Uruguay</string>
+	<string name="Country.Uzbekistan">Ouzbékistan</string>
+	<string name="Country.Vanuatu">Nouvelles-Hébrides</string>
+	<string name="Country.Vatican City">Vatican</string>
+	<string name="Country.Venezuela">Venezuela</string>
+	<string name="Country.Vietnam">Viêt Nam</string>
+	<string name="Country.Wales">Pays de Galles</string>
+	<string name="Country.Yemen">Yémen</string>
+	<string name="Country.Zambia">Zambie</string>
+	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
