--- a/Language/strings_is.xml
+++ b/Language/strings_is.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Sía</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Uppáhald</string>
@@ -18,4 +18,110 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Flokkun</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Eyða</string>
   <string name="Webradio.Dialog.Search.Header">Leita</string>
+	<string name="Country.Afghanistan">Afghanistan</string>
+	<string name="Country.Åland Islands">Álandseyjar</string>
+	<string name="Country.Albania">Albania</string>
+	<string name="Country.Albania">Albanía</string>
+	<string name="Country.Algeria">Alsír</string>
+	<string name="Country.Andorra">Andorra</string>
+	<string name="Country.Anguilla">Angvilla</string>
+	<string name="Country.Australia">Ástralía</string>
+	<string name="Country.Austria">Austurríki</string>
+	<string name="Country.Belarus">Hvíta-Rússland</string>
+	<string name="Country.Belgium">Belgia</string>
+	<string name="Country.Benin">Dahómey</string>
+	<string name="Country.Bosnia and Herzegovina">Bosnía og Hersegóvína</string>
+	<string name="Country.Brazil">Brasilía</string>
+	<string name="Country.Bulgaria">Búlgaría</string>
+	<string name="Country.Cape Verde">Grænhöfðaeyjar</string>
+	<string name="Country.Chile">Chile</string>
+	<string name="Country.China">Kína</string>
+	<string name="Country.Côte d'Ivoire">Fílabeinsströndin</string>
+	<string name="Country.Croatia">Króatía</string>
+	<string name="Country.Cyprus">Kýpur</string>
+	<string name="Country.Czech Republic">Tékkland</string>
+	<string name="Country.Denmark">Danmörk</string>
+	<string name="Country.Djibouti">Djíbútí</string>
+	<string name="Country.Dominican Republic">Dómíníkanska Lýðveldið</string>
+	<string name="Country.East Timor">Austur-Tímor</string>
+	<string name="Country.Ecuador">Ekvador</string>
+	<string name="Country.Egypt">Egyptaland</string>
+	<string name="Country.El Salvador">El Salvador</string>
+	<string name="Country.Equatorial Guinea">Miðbaugs-Gínea</string>
+	<string name="Country.Eritrea">Eritrea</string>
+	<string name="Country.Estonia">Eistland</string>
+	<string name="Country.Ethiopia">Eþópía</string>
+	<string name="Country.Falkland Islands">Falklandseyjar</string>
+	<string name="Country.Faroe Islands">Færeyjar</string>
+	<string name="Country.Fiji">Fídji</string>
+	<string name="Country.Finland">Finnland</string>
+	<string name="Country.France">Frakkland</string>
+	<string name="Country.Georgia">Georgía</string>
+	<string name="Country.Germany">Þýskaland</string>
+	<string name="Country.Ghana">Ghana</string>
+	<string name="Country.Greece">Grikkland</string>
+	<string name="Country.Greenland">Grænland</string>
+	<string name="Country.Grenada">Grenada</string>
+	<string name="Country.Guam">Gvam</string>
+	<string name="Country.Guatemala">Gvatemala</string>
+	<string name="Country.Guinea">Gínea</string>
+	<string name="Country.Guinea-Bissau">Gínea-Bissá</string>
+	<string name="Country.Holland">Holland</string>
+	<string name="Country.Holy See">Páfagarður</string>
+	<string name="Country.Hungary">Ungverjaland</string>
+	<string name="Country.Iceland">Ísland</string>
+	<string name="Country.India">Indland</string>
+	<string name="Country.Indonesia">Indónesía</string>
+	<string name="Country.Iran">Íran</string>
+	<string name="Country.Iran">Persia</string>
+	<string name="Country.Iraq">Írak</string>
+	<string name="Country.Ireland">Írland</string>
+	<string name="Country.Israel">Ísrael</string>
+	<string name="Country.Italy">Ítalía</string>
+	<string name="Country.Kazakhstan">Kasakstan</string>
+	<string name="Country.Latvia">Lettland</string>
+	<string name="Country.Lesotho">Lesótó</string>
+	<string name="Country.Lithuania">Litháen</string>
+	<string name="Country.Luxembourg">Lúxemborg</string>
+	<string name="Country.Republic of Macedonia">Makedónía</string>
+	<string name="Country.Madagascar">Madagaskar</string>
+	<string name="Country.Mali">Malí</string>
+	<string name="Country.Mayotte">Mayotte</string>
+	<string name="Country.Mexico">Mexíkó</string>
+	<string name="Country.Moldova">Moldóva</string>
+	<string name="Country.Monaco">Mónakó</string>
+	<string name="Country.Mongolia">Mongólía</string>
+	<string name="Country.Montenegro">Svartfjallaland</string>
+	<string name="Country.Mozambique">Mósambík</string>
+	<string name="Country.Netherlands">Niðurlönd</string>
+	<string name="Country.New Caledonia">Nýja-Kaledónía</string>
+	<string name="Country.Niue">Niue</string>
+	<string name="Country.Norway">Noregur</string>
+	<string name="Country.Pakistan">Pakistan</string>
+	<string name="Country.Paraguay">Paragvæ</string>
+	<string name="Country.Peru">Perú</string>
+	<string name="Country.Philippines">Filippseyjar</string>
+	<string name="Country.Poland">Pólland</string>
+	<string name="Country.Portugal">Portúgal</string>
+	<string name="Country.Romania">Rúmenía</string>
+	<string name="Country.Russia">Rússland</string>
+	<string name="Country.San Marino">San Marínó</string>
+	<string name="Country.Scotland">Skotland</string>
+	<string name="Country.Slovakia">Slóvakía</string>
+	<string name="Country.Slovenia">Slóvenía</string>
+	<string name="Country.Spain">Spánn</string>
+	<string name="Country.Sweden">Svíþjóð</string>
+	<string name="Country.Switzerland">Sviss</string>
+	<string name="Country.Tajikistan">Tadsjikistan</string>
+	<string name="Country.The Gambia">Gambía</string>
+	<string name="Country.Turkey">Tyrkland</string>
+	<string name="Country.Ukraine">Úkraína</string>
+	<string name="Country.United Arab Emirates"> Sameinuðu arabísku furstadæmin </string>
+	<string name="Country.United Kingdom">Bretland</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Hið sameinaða konungsdæmi Stóra-Bretland og Norður-Írland</string>
+	<string name="Country.United States of America">Bandaríki Norður-Ameríku</string>
+	<string name="Country.Vanuatu">Vanúatú</string>
+	<string name="Country.Vanuatu">Nýju-Suðureyjar</string>
+	<string name="Country.Vatican City">Vatikanið</string>
+	<string name="Country.Wales">Wales</string>
 </resources>
