--- a/Language/strings_lt.xml
+++ b/Language/strings_lt.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.View">Išvaizda</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filtras</string>
@@ -19,4 +19,238 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Zanras</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Trinti</string>
   <string name="Webradio.Dialog.Search.Header">Paieska</string>
+	<string name="Country.Afghanistan">Afganistanas</string>
+	<string name="Country.Åland Islands">Alandų salos</string>
+	<string name="Country.Albania">Albanija</string>
+	<string name="Country.Algeria">Alžyras</string>
+	<string name="Country.American Samoa">Amerikos Samoa</string>
+	<string name="Country.Andorra">Andora</string>
+	<string name="Country.Anguilla">Angilija</string>
+	<string name="Country.Antigua and Barbuda">Antigva ir Barbuda</string>
+	<string name="Country.Argentina">Argentina</string>
+	<string name="Country.Armenia">Armėnija</string>
+	<string name="Country.Aruba">Aruba</string>
+	<string name="Country.Australia">Australija</string>
+	<string name="Country.Austria">Austrija</string>
+	<string name="Country.Azerbaijan">Azerbaidžanas</string>
+	<string name="Country.Bahamas">Bahamos</string>
+	<string name="Country.Bahrain">Bahreinas</string>
+	<string name="Country.Bangladesh">Bangladešas</string>
+	<string name="Country.Barbados">Barbadosas</string>
+	<string name="Country.Belarus">Baltarusija</string>
+	<string name="Country.Belgium">Belgija</string>
+	<string name="Country.Belize">Belizas</string>
+	<string name="Country.Belize">Britų Hondūras</string>
+	<string name="Country.Benin">Beninas</string>
+	<string name="Country.Benin">Dahomėja</string>
+	<string name="Country.Bermuda">Bermuda</string>
+	<string name="Country.Bhutan">Butanas</string>
+	<string name="Country.Bolivia">Bolivija</string>
+	<string name="Country.Bosnia and Herzegovina">Bosnija ir Hercegovina</string>
+	<string name="Country.Botswana">Botsvana</string>
+	<string name="Country.Brazil">Brazilija</string>
+	<string name="Country.British Virgin Islands">Britų Mergelių salos</string>
+	<string name="Country.Brunei">Brunėjus</string>
+	<string name="Country.Bulgaria">Bulgarija</string>
+	<string name="Country.Burkina Faso">Burkina Fasas</string>
+	<string name="Country.Burundi">Burundis</string>
+	<string name="Country.Cambodia">Kambodža</string>
+	<string name="Country.Cameroon">Kamerūnas</string>
+	<string name="Country.Canada">Kanada</string>
+	<string name="Country.Cape Verde">Žaliasis Kyšulys</string>
+	<string name="Country.Cayman Islands">Kaimanų salos</string>
+	<string name="Country.Central African Republic">Centrinės Afrikos Respublika</string>
+	<string name="Country.Chad">Čadas</string>
+	<string name="Country.Chile">Čilė</string>
+	<string name="Country.China">Kinija</string>
+	<string name="Country.Christmas Island">Kalėdų salos</string>
+	<string name="Country.Colombia">Kolumbija</string>
+	<string name="Country.Comoros">Komorai</string>
+	<string name="Country.Cook Islands">Kuko salos</string>
+	<string name="Country.Costa Rica">Kosta Rika</string>
+	<string name="Country.Côte d'Ivoire">Dramblio Kaulo Krantas</string>
+	<string name="Country.Croatia">Kroatija</string>
+	<string name="Country.Cuba">Kuba</string>
+	<string name="Country.Cyprus">Kipras</string>
+	<string name="Country.Czech Republic">Čekija</string>
+	<string name="Country.Denmark">Danija</string>
+	<string name="Country.Djibouti">Džibutis</string>
+	<string name="Country.Dominica">Dominika</string>
+	<string name="Country.Dominican Republic">Dominikos Respublika</string>
+	<string name="Country.East Timor">Rytų Timoras</string>
+	<string name="Country.Ecuador">Ekvadoras</string>
+	<string name="Country.Egypt">Egiptas</string>
+	<string name="Country.El Salvador">Salvadoras</string>
+	<string name="Country.England">Anglija</string>
+	<string name="Country.Equatorial Guinea">Pusiaujo Gvinėja</string>
+	<string name="Country.Eritrea">Eritrėja</string>
+	<string name="Country.Estonia">Estija</string>
+	<string name="Country.Ethiopia">Etiopija</string>
+	<string name="Country.Faroe Islands">Farerų Salos</string>
+	<string name="Country.Fiji">Fidžis</string>
+	<string name="Country.Finland">Suomija</string>
+	<string name="Country.France">Prancūzija</string>
+	<string name="Country.French Guiana">Prancūzijos Gviana</string>
+	<string name="Country.French Polynesia">Prancūzijos Polinezija</string>
+	<string name="Country.French Southern and Antarctic Lands">Prancūzijos Pietų Sritys</string>
+	<string name="Country.Gabon">Gabonas</string>
+	<string name="Country.Georgia">Gruzija</string>
+	<string name="Country.Germany">Vokietija</string>
+	<string name="Country.Gibraltar">Gibraltaras</string>
+	<string name="Country.Greece">Graikija</string>
+	<string name="Country.Greenland">Grenlandija</string>
+	<string name="Country.Grenada">Grenada</string>
+	<string name="Country.Guam">Guamas</string>
+	<string name="Country.Guatemala">Gvatemala</string>
+	<string name="Country.Guinea">Gvinėja</string>
+	<string name="Country.Guinea-Bissau">Bisau Gvinėja</string>
+	<string name="Country.Guyana">Gajana</string>
+	<string name="Country.Haiti">Haitis</string>
+	<string name="Country.Holland">Olandija</string>
+	<string name="Country.Holy See">Šventasis Sostas</string>
+	<string name="Country.Honduras">Hondūras</string>
+	<string name="Country.Hong Kong">Honkongas</string>
+	<string name="Country.Hungary">Vengrija</string>
+	<string name="Country.Iceland">Islandija</string>
+	<string name="Country.India">Indija</string>
+	<string name="Country.Indonesia">Indonezija</string>
+	<string name="Country.Iran">Iranas</string>
+	<string name="Country.Iraq">Irakas</string>
+	<string name="Country.Ireland">Airija</string>
+	<string name="Country.Israel">Izraelis</string>
+	<string name="Country.Italy">Italija</string>
+	<string name="Country.Jamaica">Jamaika</string>
+	<string name="Country.Japan">Japonija</string>
+	<string name="Country.Jordan">Jordanija</string>
+	<string name="Country.Kazakhstan">Kazachstanas</string>
+	<string name="Country.Kenya">Kenija</string>
+	<string name="Country.Kiribati">Kiribatis</string>
+	<string name="Country.Korea">Korėja</string>
+	<string name="Country.Kuwait"> Kuveitas </string>
+	<string name="Country.Kyrgyzstan">Kirgizija</string>
+	<string name="Country.Laos">Laosas</string>
+	<string name="Country.Latvia">Latvija</string>
+	<string name="Country.Lebanon">Libanas</string>
+	<string name="Country.Lesotho">Lesotas</string>
+	<string name="Country.Liberia">Liberija</string>
+	<string name="Country.Libya">Libija</string>
+	<string name="Country.Liechtenstein">Lichtenšteinas</string>
+	<string name="Country.Lithuania">Lietuva</string>
+	<string name="Country.Luxembourg">Liuksemburgas</string>
+	<string name="Country.Macau">Makao</string>
+	<string name="Country.Republic of Macedonia">Makedonija</string>
+	<string name="Country.Madagascar">Madagaskaras</string>
+	<string name="Country.Malawi">Malavis</string>
+	<string name="Country.Malaysia">Malaizija</string>
+	<string name="Country.Maldives">Maldyvai</string>
+	<string name="Country.Mali">Malis</string>
+	<string name="Country.Marshall Islands">Maršalo Salos</string>
+	<string name="Country.Martinique">Martinika</string>
+	<string name="Country.Mauritania">Mauritanija</string>
+	<string name="Country.Mauritius">Mauricijus</string>
+	<string name="Country.Mayotte">Majotas</string>
+	<string name="Country.Mexico">Meksika</string>
+	<string name="Country.Federated States of Micronesia">Mikronezija</string>
+	<string name="Country.Moldova">Moldavija</string>
+	<string name="Country.Monaco">Monakas</string>
+	<string name="Country.Mongolia">Mongolija</string>
+	<string name="Country.Montenegro">Juodkalnija</string>
+	<string name="Country.Morocco">Marokas</string>
+	<string name="Country.Mozambique">Mozambikas</string>
+	<string name="Country.Myanmar">Mianmaras</string>
+	<string name="Country.Namibia">Namibija</string>
+	<string name="Country.Nauru">Nauru</string>
+	<string name="Country.Nepal">Nepalas</string>
+	<string name="Country.Netherlands Antilles">Nyderlandų Antilai</string>
+	<string name="Country.Netherlands">Nyderlandai</string>
+	<string name="Country.New Caledonia">Naujoji Kaledonija</string>
+	<string name="Country.New Zealand">Naujoji Zelandija</string>
+	<string name="Country.Nicaragua">Nikaragva</string>
+	<string name="Country.Niger">Nigeris</string>
+	<string name="Country.Nigeria">Nigerija</string>
+	<string name="Country.Niue">Niujė</string>
+	<string name="Country.Norfolk Island">Norfolkas</string>
+	<string name="Country.North Korea">Šiaurės Korėja</string>
+	<string name="Country.Northern Mariana Islands">Marijanos Šiaurinės salos</string>
+	<string name="Country.Norway">Norvegija</string>
+	<string name="Country.Oman">Omanas</string>
+	<string name="Country.Pakistan">Pakistanas</string>
+	<string name="Country.Palestinian territories">Palestina</string>
+	<string name="Country.Papua New Guinea">Papua Naujoji Gvinėja</string>
+	<string name="Country.Paraguay">Paragvajus</string>
+	<string name="Country.Philippines">Filipinai</string>
+	<string name="Country.Pitcairn Islands">Pitkerno salos</string>
+	<string name="Country.Poland">Lenkija</string>
+	<string name="Country.Portugal">Portugalija</string>
+	<string name="Country.Monaco">Monako kunigaikštystė</string>
+	<string name="Country.Puerto Rico">Puerto Rikas</string>
+	<string name="Country.Qatar">Kataras</string>
+	<string name="Country.Réunion">Reunjonas</string>
+	<string name="Country.Romania">Rumunija</string>
+	<string name="Country.Russia">Rusija</string>
+	<string name="Country.Rwanda">Ruanda</string>
+	<string name="Country.Saint Helena">Šventos Elenos sala</string>
+	<string name="Country.Saint Kitts and Nevis">Sent Kitsas ir Nevis</string>
+	<string name="Country.Saint Lucia">Sent Lusija</string>
+	<string name="Country.Saint Pierre and Miquelon">Sen Pjeras ir Mikelonas</string>
+	<string name="Country.Saint Vincent and the Grenadines"> Sent Vinsentas ir Grenadinai </string>
+	<string name="Country.Samoa">Samoa</string>
+	<string name="Country.San Marino">San Marinas</string>
+	<string name="Country.São Tomé and Príncipe">San Tomė ir Prinsipė</string>
+	<string name="Country.Saudi Arabia">Saudo Arabija</string>
+	<string name="Country.Scotland">Škotija</string>
+	<string name="Country.Senegal">Senegalas</string>
+	<string name="Country.Serbia">Serbija</string>
+	<string name="Country.Seychelles">Seišeliai</string>
+	<string name="Country.Sierra Leone">Siera Leonė</string>
+	<string name="Country.Singapore">Singapūras</string>
+	<string name="Country.Slovakia">Slovakija</string>
+	<string name="Country.Slovenia">Slovėnija</string>
+	<string name="Country.Solomon Islands">Saliamono Salos</string>
+	<string name="Country.Somalia">Somalis</string>
+	<string name="Country.South Africa">Pietų Afrika</string>
+	<string name="Country.South Georgia and South Sandwich Islands">Pietų Džordžijos ir Pietų Sandvičo salos</string>
+	<string name="Country.South Korea">Pietų Korėja</string>
+	<string name="Country.South Ossetia">Pietų Osetija</string>
+	<string name="Country.Spain">Ispanija</string>
+	<string name="Country.Sri Lanka">Šri Lanka</string>
+	<string name="Country.Sudan">Sudanas</string>
+	<string name="Country.Suriname">Surinamas</string>
+	<string name="Country.Swaziland">Svazilandas</string>
+	<string name="Country.Sweden">Švedija</string>
+	<string name="Country.Switzerland">Šveicarija</string>
+	<string name="Country.Syria">Sirija</string>
+	<string name="Country.Free Area of the Republic of China">Taivanas</string>
+	<string name="Country.Tajikistan">Tadžikija</string>
+	<string name="Country.Tanzania">Tanzanija</string>
+	<string name="Country.Thailand">Tailandas</string>
+	<string name="Country.The Gambia">Gambija</string>
+	<string name="Country.Togo">Togas</string>
+	<string name="Country.Tokelau Islands">Tokelau</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Transnistria">Padniestrė</string>
+	<string name="Country.Trinidad and Tobago">Trinidadas ir Tobagas</string>
+	<string name="Country.Tunisia">Tunisas</string>
+	<string name="Country.Turkey">Turkija</string>
+	<string name="Country.Northern Cyprus">Turkų Kipras</string>
+	<string name="Country.Turkmenistan">Turkmėnija</string>
+	<string name="Country.Turks and Caicos Islands">Terksas ir Kaikosas</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Uganda</string>
+	<string name="Country.Ukraine">Ukraina</string>
+	<string name="Country.United Arab Emirates"> Jungtiniai Arabų Emiratai </string>
+	<string name="Country.United Kingdom">Jungtinė Karalystė</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Jungtinė Didžiosios Britanijos ir Šiaurės Airijos Karalystė</string>
+	<string name="Country.United States Virgin Islands">Mergelių salos</string>
+	<string name="Country.Uruguay">Urugvajus</string>
+	<string name="Country.Uzbekistan">Uzbekistanas</string>
+	<string name="Country.Vatican City">Vatikanas</string>
+	<string name="Country.Venezuela">Venesuela</string>
+	<string name="Country.Vietnam">Vietnamas</string>
+	<string name="Country.Wales">Velsas</string>
+	<string name="Country.Wallis and Futuna">Volisas ir Futūna</string>
+	<string name="Country.Western Sahara">Vakarų Sachara</string>
+	<string name="Country.Yemen">Jemenas</string>
+	<string name="Country.Zambia">Замбија</string>
+	<string name="Country.Zimbabwe">Zimbabvė</string>
 </resources>
