--- a/Language/strings_nl.xml
+++ b/Language/strings_nl.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.View">Bekijk</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
@@ -19,4 +19,207 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Verwijderen</string>
   <string name="Webradio.Dialog.Search.Header">Zoek</string>
+	<string name="Country.Afghanistan">Afghanistan</string>
+	<string name="Country.Albania">Albanië</string>
+	<string name="Country.Algeria">Algerije</string>
+	<string name="Country.American Samoa">Amerikaans-Samoa</string>
+	<string name="Country.Andorra">Andorra</string>
+	<string name="Country.Antigua and Barbuda">Antigua en Barbuda</string>
+	<string name="Country.Argentina">Argentinië</string>
+	<string name="Country.Armenia">Armenië</string>
+	<string name="Country.Aruba">Aruba</string>
+	<string name="Country.Australia">Australië</string>
+	<string name="Country.Austria">Oostenrijk</string>
+	<string name="Country.Azerbaijan">Azerbeidzjan</string>
+	<string name="Country.Bahamas">Bahama's</string>
+	<string name="Country.Bahrain">Bahrein</string>
+	<string name="Country.Bangladesh">Bangladesh</string>
+	<string name="Country.Barbados">Barbados</string>
+	<string name="Country.Belarus">Belarus</string>
+	<string name="Country.Belize">Belize</string>
+	<string name="Country.Belize">Brits-Honduras</string>
+	<string name="Country.Benin">Benin</string>
+	<string name="Country.Benin">Dahomey</string>
+	<string name="Country.Bhutan">Bhutan</string>
+	<string name="Country.Bolivia">Bolivië</string>
+	<string name="Country.Bosnia and Herzegovina">Bosnië en Herzegovina</string>
+	<string name="Country.Botswana">Botswana</string>
+	<string name="Country.Brazil">Brazilië</string>
+	<string name="Country.Brunei">Brunei</string>
+	<string name="Country.Bulgaria">Bulgarije</string>
+	<string name="Country.Burkina Faso">Burkina Faso</string>
+	<string name="Country.Burkina Faso">Opper-Volta</string>
+	<string name="Country.Cambodia">Cambodja</string>
+	<string name="Country.Cameroon">Kameroen</string>
+	<string name="Country.Canada">Canada</string>
+	<string name="Country.Cape Verde">Kaapverdië</string>
+	<string name="Country.Central African Republic">Centraal-Afrikaanse Republiek</string>
+	<string name="Country.Chad">Tsjaad</string>
+	<string name="Country.Chile">Chili</string>
+	<string name="Country.China">China</string>
+	<string name="Country.Colombia">Colombia</string>
+	<string name="Country.Comoros">Comoren</string>
+	<string name="Country.Costa Rica">Costa Rica</string>
+	<string name="Country.Côte d'Ivoire">Ivoorkust</string>
+	<string name="Country.Croatia">Kroatië</string>
+	<string name="Country.Cyprus">Cyprus</string>
+	<string name="Country.Czech Republic">Tsjechië</string>
+	<string name="Country.Denmark">Denemarken</string>
+	<string name="Country.Djibouti">Djibouti</string>
+	<string name="Country.Dominican Republic">Dominicaanse Republiek</string>
+	<string name="Country.East Timor">Oost-Timor</string>
+	<string name="Country.Ecuador">Ecuador</string>
+	<string name="Country.Egypt">Egypte</string>
+	<string name="Country.El Salvador">El Salvador</string>
+	<string name="Country.England">Engeland</string>
+	<string name="Country.Equatorial Guinea">Equatoriaal-Guinea</string>
+	<string name="Country.Eritrea">Eritrea</string>
+	<string name="Country.Estonia">Estland</string>
+	<string name="Country.Ethiopia">Ethiopië</string>
+	<string name="Country.Ethiopia">Abessinië</string>
+	<string name="Country.Falkland Islands">Falklandeilanden</string>
+	<string name="Country.Faroe Islands">Faeröer</string>
+	<string name="Country.Fiji">Fiji</string>
+	<string name="Country.Finland">Finland</string>
+	<string name="Country.France">Frankrijk</string>
+	<string name="Country.French Guiana">Frans-Guyana</string>
+	<string name="Country.French Polynesia">Frans-Polynesië</string>
+	<string name="Country.Georgia">Georgië</string>
+	<string name="Country.Germany">Duitsland</string>
+	<string name="Country.Ghana">Ghana</string>
+	<string name="Country.Greece">Griekenland</string>
+	<string name="Country.Greenland">Groenland</string>
+	<string name="Country.Grenada">Grenada</string>
+	<string name="Country.Guatemala">Guatemala</string>
+	<string name="Country.Guinea">Guinee</string>
+	<string name="Country.Guinea-Bissau">Guinee-Bissau</string>
+	<string name="Country.Haiti">Haïti</string>
+	<string name="Country.Holland">Holland</string>
+	<string name="Country.Holy See">Heilige Stoel</string>
+	<string name="Country.Hungary">Hongarije</string>
+	<string name="Country.Iceland">IJsland</string>
+	<string name="Country.India">India</string>
+	<string name="Country.Indonesia">Indonesië</string>
+	<string name="Country.Iraq">Irak</string>
+	<string name="Country.Ireland">Ierland</string>
+	<string name="Country.Israel">Israël</string>
+	<string name="Country.Italy">Italië</string>
+	<string name="Country.Japan">Japan</string>
+	<string name="Country.Jordan">Jordanië</string>
+	<string name="Country.Jordan">Transjordanië</string>
+	<string name="Country.Kazakhstan">Kazachstan</string>
+	<string name="Country.Korea">Korea</string>
+	<string name="Country.Kuwait"> Koeweit </string>
+	<string name="Country.Kuwait"> Kuwait </string>
+	<string name="Country.Kyrgyzstan">Kirgizië</string>
+	<string name="Country.Latvia">Letland</string>
+	<string name="Country.Lebanon">Libanon</string>
+	<string name="Country.Lesotho">Lesotho</string>
+	<string name="Country.Liberia">Liberia</string>
+	<string name="Country.Libya">Libië</string>
+	<string name="Country.Lithuania">Litouwen</string>
+	<string name="Country.Luxembourg">Luxemburg</string>
+	<string name="Country.Republic of Macedonia">Macedonië</string>
+	<string name="Country.Madagascar">Madagaskar</string>
+	<string name="Country.Malawi">Malawi</string>
+	<string name="Country.Malaysia">Maleisië</string>
+	<string name="Country.Maldives">Maldiven</string>
+	<string name="Country.Marshall Islands">Marshalleilanden</string>
+	<string name="Country.Mauritania">Mauritanië</string>
+	<string name="Country.Mauritius">Mauritius</string>
+	<string name="Country.Mayotte">Mayotte</string>
+	<string name="Country.Mexico">Mexico</string>
+	<string name="Country.Moldova">Moldavië</string>
+	<string name="Country.Monaco">Monaco</string>
+	<string name="Country.Mongolia">Mongolië</string>
+	<string name="Country.Montenegro">Montenegro</string>
+	<string name="Country.Morocco">Marokko</string>
+	<string name="Country.Myanmar">Myanmar</string>
+	<string name="Country.Myanmar">Birma</string>
+	<string name="Country.Namibia">Namibië</string>
+	<string name="Country.Nauru">Nauru</string>
+	<string name="Country.Nepal">Nepal</string>
+	<string name="Country.Netherlands Antilles">Nederlandse Antillen</string>
+	<string name="Country.Netherlands">Nederland</string>
+	<string name="Country.New Zealand">Nieuw-Zeeland</string>
+	<string name="Country.Nicaragua">Nicaragua</string>
+	<string name="Country.Niger">Niger</string>
+	<string name="Country.Nigeria">Nigeria</string>
+	<string name="Country.Norway">Noorwegen</string>
+	<string name="Country.Pakistan">Pakistan</string>
+	<string name="Country.Palestinian territories">Palestina</string>
+	<string name="Country.Papua New Guinea">Papoea-Nieuw-Guinea</string>
+	<string name="Country.Paraguay">Paraguay</string>
+	<string name="Country.Philippines">Filipijnen</string>
+	<string name="Country.Poland">Polen</string>
+	<string name="Country.Portugal">Portugal</string>
+	<string name="Country.Monaco">Prinsdom Monaco</string>
+	<string name="Country.Qatar">Qatar</string>
+	<string name="Country.Réunion">Réunion</string>
+	<string name="Country.Romania">Roemenië</string>
+	<string name="Country.Russia">Rusland</string>
+	<string name="Country.Rwanda">Rwanda</string>
+	<string name="Country.Saint Helena">Sint-Helena</string>
+	<string name="Country.Saint Kitts and Nevis">Saint Kitts en Nevis</string>
+	<string name="Country.Saint Lucia">Saint Lucia</string>
+	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent en de Grenadines</string>
+	<string name="Country.Samoa">Samoa</string>
+	<string name="Country.San Marino">San Marino</string>
+	<string name="Country.São Tomé and Príncipe">Sao Tomé en Principe</string>
+	<string name="Country.Saudi Arabia">Saoedi-Arabië</string>
+	<string name="Country.Scotland">Schotland</string>
+	<string name="Country.Senegal">Senegal</string>
+	<string name="Country.Serbia">Servië</string>
+	<string name="Country.Seychelles">Seychellen</string>
+	<string name="Country.Sierra Leone">Sierra Leone</string>
+	<string name="Country.Singapore">Singapore</string>
+	<string name="Country.Slovakia">Slowakije</string>
+	<string name="Country.Slovenia">Slovenië</string>
+	<string name="Country.Solomon Islands">Salomonseilanden</string>
+	<string name="Country.Somalia">Somalië</string>
+	<string name="Country.South Georgia and South Sandwich Islands">Zuid-Georgië en de Zuidelijke Sandwicheilanden</string>
+	<string name="Country.South Korea">Zuid-Korea</string>
+	<string name="Country.Spain">Spanje</string>
+	<string name="Country.Sri Lanka">Sri Lanka</string>
+	<string name="Country.Sri Lanka">Ceylon</string>
+	<string name="Country.Sudan">Soedan</string>
+	<string name="Country.Suriname">Suriname</string>
+	<string name="Country.Suriname">Nederlands Guyana</string>
+	<string name="Country.Swaziland">Swaziland</string>
+	<string name="Country.Sweden">Zweden</string>
+	<string name="Country.Switzerland">Zwitserland</string>
+	<string name="Country.Syria">Syrië</string>
+	<string name="Country.Free Area of the Republic of China">Taiwan</string>
+	<string name="Country.Tajikistan">Tadzjikistan</string>
+	<string name="Country.Tanzania">Tanzania</string>
+	<string name="Country.Thailand">Thailand</string>
+	<string name="Country.The Gambia">Gambia</string>
+	<string name="Country.Togo">Togo</string>
+	<string name="Country.Tokelau Islands">Tokelau-eilanden</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Trinidad and Tobago">Trinidad en Tobago</string>
+	<string name="Country.Tunisia">Tunesië</string>
+	<string name="Country.Turkey">Turkije</string>
+	<string name="Country.Turkmenistan">Turkmenistan</string>
+	<string name="Country.Turks and Caicos Islands">Turks- en Caicoseilanden</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Oeganda</string>
+	<string name="Country.Ukraine">Oekraïne</string>
+	<string name="Country.United Arab Emirates"> Verenigde Arabische Emiraten </string>
+	<string name="Country.United Kingdom">Verenigd Koninkrijk</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Verenigd Koninkrijk van Groot-Brittanië en Noord-Ierland</string>
+	<string name="Country.United States of America">Verenigde Staten van Amerika</string>
+	<string name="Country.United States Virgin Islands">Amerikaanse Maagdeneilanden</string>
+	<string name="Country.Uruguay">Uruguay</string>
+	<string name="Country.Uzbekistan">Oezbekistan</string>
+	<string name="Country.Vanuatu">Nieuwe Hebriden</string>
+	<string name="Country.Vatican City">Vaticaanstad</string>
+	<string name="Country.Venezuela">Venezuela</string>
+	<string name="Country.Vietnam">Vietnam</string>
+	<string name="Country.Wales">Wales</string>
+	<string name="Country.Wallis and Futuna">Wallis en Futuna</string>
+	<string name="Country.Western Sahara">Westelijke Sahara</string>
+	<string name="Country.Yemen">Jemen</string>
+	<string name="Country.Zambia">Zambia</string>
+	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
