--- a/Language/strings_pl.xml
+++ b/Language/strings_pl.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Filtr</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Ulubione</string>
@@ -18,4 +18,243 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Rodzaj</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Usuń</string>
   <string name="Webradio.Dialog.Search.Header">Wyszukaj</string>
+	<string name="Country.Afghanistan">Afganistan</string>
+	<string name="Country.Åland Islands">Wyspy Alandzkie</string>
+	<string name="Country.Albania">Albania</string>
+	<string name="Country.Algeria">Algieria</string>
+	<string name="Country.American Samoa">Samoa Amerykańskie</string>
+	<string name="Country.Andorra">Andora</string>
+	<string name="Country.Anguilla">Anguilla</string>
+	<string name="Country.Antigua and Barbuda">Antigua i Barbuda</string>
+	<string name="Country.Argentina">Argentyna</string>
+	<string name="Country.Armenia">Armenia</string>
+	<string name="Country.Aruba">Aruba</string>
+	<string name="Country.Australia">Australia</string>
+	<string name="Country.Austria">Austria</string>
+	<string name="Country.Azerbaijan">Azerbejdżan</string>
+	<string name="Country.Bahamas">Bahamy</string>
+	<string name="Country.Bahrain">Bahrajn</string>
+	<string name="Country.Bangladesh">Bangladesz</string>
+	<string name="Country.Barbados">Barbados</string>
+	<string name="Country.Belarus">Białoruś</string>
+	<string name="Country.Belgium">Belgia</string>
+	<string name="Country.Belize">Belize</string>
+	<string name="Country.Belize">Honduras Brytyjski</string>
+	<string name="Country.Benin">Benin</string>
+	<string name="Country.Benin">Dahomej</string>
+	<string name="Country.Bermuda">Bermudy</string>
+	<string name="Country.Bhutan">Bhutan</string>
+	<string name="Country.Bolivia">Boliwia</string>
+	<string name="Country.Bosnia and Herzegovina">Bośnia i Hercegowina</string>
+	<string name="Country.Botswana">Botswana</string>
+	<string name="Country.Brazil">Brazylia</string>
+	<string name="Country.British Virgin Islands">Brytyjskie Wyspy Dziewicze</string>
+	<string name="Country.Brunei">Brunei</string>
+	<string name="Country.Bulgaria">Bułgaria</string>
+	<string name="Country.Burkina Faso">Burkina Faso</string>
+	<string name="Country.Burkina Faso">Górna Wolta</string>
+	<string name="Country.Cambodia">Kambodża</string>
+	<string name="Country.Cameroon">Kamerun</string>
+	<string name="Country.Canada">Kanada</string>
+	<string name="Country.Cape Verde">Wyspy Zielonego Przylądka</string>
+	<string name="Country.Cayman Islands">Kajmany</string>
+	<string name="Country.Central African Republic">Republika Środkowoafrykańska</string>
+	<string name="Country.Chad">Czad</string>
+	<string name="Country.Chile">Chile</string>
+	<string name="Country.China">Chiny</string>
+	<string name="Country.Christmas Island">Wyspa Bożego Narodzenia</string>
+	<string name="Country.Cocos (Keeling) Islands">Wyspy Kokosowe</string>
+	<string name="Country.Colombia">Kolumbia</string>
+	<string name="Country.Comoros">Komory</string>
+	<string name="Country.Cook Islands">Wyspy Cooka</string>
+	<string name="Country.Costa Rica">Kostaryka</string>
+	<string name="Country.Côte d'Ivoire">Wybrzeże Kości Słoniowej</string>
+	<string name="Country.Croatia">Chorwacja</string>
+	<string name="Country.Cuba">Kuba</string>
+	<string name="Country.Cyprus">Cypr</string>
+	<string name="Country.Denmark">Dania</string>
+	<string name="Country.Djibouti">Dżibuti</string>
+	<string name="Country.Dominica">Dominika</string>
+	<string name="Country.Dominican Republic">Dominikana</string>
+	<string name="Country.East Timor">Timor Wschodni</string>
+	<string name="Country.Ecuador">Ekwador</string>
+	<string name="Country.Egypt">Egipt</string>
+	<string name="Country.El Salvador">Salwador</string>
+	<string name="Country.England">Anglia</string>
+	<string name="Country.Equatorial Guinea">Gwinea Równikowa</string>
+	<string name="Country.Eritrea">Erytrea</string>
+	<string name="Country.Estonia">Estonia</string>
+	<string name="Country.Ethiopia">Etiopia</string>
+	<string name="Country.Ethiopia">Abisynia</string>
+	<string name="Country.Falkland Islands">Falklandy</string>
+	<string name="Country.Faroe Islands">Wyspy Owcze</string>
+	<string name="Country.Fiji">Fidżi</string>
+	<string name="Country.Finland">Finlandia</string>
+	<string name="Country.France">Francja</string>
+	<string name="Country.French Guiana">Gujana Francuska</string>
+	<string name="Country.French Polynesia">Polinezja Francuska</string>
+	<string name="Country.French Southern and Antarctic Lands">Francuskie Terytoria Południowe i Antarktyczne</string>
+	<string name="Country.Georgia">Gruzja</string>
+	<string name="Country.Germany">Niemcy</string>
+	<string name="Country.Ghana">Ghana</string>
+	<string name="Country.Greece">Grecja</string>
+	<string name="Country.Grenada">Grenada</string>
+	<string name="Country.Guadeloupe">Gwadelupa</string>
+	<string name="Country.Guam">Guam</string>
+	<string name="Country.Guatemala">Gwatemala</string>
+	<string name="Country.Guinea">Gwinea</string>
+	<string name="Country.Guinea-Bissau">Gwinea-Bissau</string>
+	<string name="Country.Guyana">Gujana</string>
+	<string name="Country.Haiti">Haiti</string>
+	<string name="Country.Holland">Holandia</string>
+	<string name="Country.Holy See">Stolica Apostolska</string>
+	<string name="Country.Hong Kong">Hong Kong</string>
+	<string name="Country.Hungary">Węgry</string>
+	<string name="Country.Iceland">Islandia</string>
+	<string name="Country.India">Indie</string>
+	<string name="Country.Indonesia">Indonezja</string>
+	<string name="Country.Iran">Iran</string>
+	<string name="Country.Iran">Persja</string>
+	<string name="Country.Iraq">Irak</string>
+	<string name="Country.Ireland">Irlandia</string>
+	<string name="Country.Israel">Izrael</string>
+	<string name="Country.Italy">Włochy</string>
+	<string name="Country.Jamaica">Jamajka</string>
+	<string name="Country.Japan">Japonia</string>
+	<string name="Country.Jordan">Jordania</string>
+	<string name="Country.Jordan">Transjordania</string>
+	<string name="Country.Kazakhstan">Kazachstan</string>
+	<string name="Country.Korea">Korea</string>
+	<string name="Country.Kuwait"> Kuwejt </string>
+	<string name="Country.Kyrgyzstan">Kirgistan</string>
+	<string name="Country.Latvia">Łotwa</string>
+	<string name="Country.Lesotho">Lesotho</string>
+	<string name="Country.Liberia">Liberia</string>
+	<string name="Country.Libya">Libia</string>
+	<string name="Country.Lithuania">Litwa</string>
+	<string name="Country.Luxembourg">Luksemburg</string>
+	<string name="Country.Macau">Makau</string>
+	<string name="Country.Republic of Macedonia">Macedonia</string>
+	<string name="Country.Madagascar">Madagaskar</string>
+	<string name="Country.Malawi">Malawi</string>
+	<string name="Country.Malaysia">Malezja</string>
+	<string name="Country.Maldives">Malediwy</string>
+	<string name="Country.Marshall Islands">Wyspy Marshalla</string>
+	<string name="Country.Martinique">Martynika</string>
+	<string name="Country.Mauritania">Mauretania</string>
+	<string name="Country.Mauritius">Mauritius</string>
+	<string name="Country.Mayotte">Majotta</string>
+	<string name="Country.Mexico">Meksyk</string>
+	<string name="Country.Federated States of Micronesia">Mikronezja</string>
+	<string name="Country.Moldova">Mołdawia</string>
+	<string name="Country.Monaco">Monako</string>
+	<string name="Country.Mongolia">Mongolia</string>
+	<string name="Country.Montenegro">Czarnogóra</string>
+	<string name="Country.Montserrat">Montserrat</string>
+	<string name="Country.Morocco">Maroko</string>
+	<string name="Country.Mozambique">Mozambik</string>
+	<string name="Country.Myanmar">Myanmar</string>
+	<string name="Country.Myanmar">Birma</string>
+	<string name="Country.Namibia">Namibia</string>
+	<string name="Country.Nauru">Nauru</string>
+	<string name="Country.Nepal">Nepal</string>
+	<string name="Country.Netherlands Antilles">Antyle Holenderskie</string>
+	<string name="Country.Netherlands">Holandia</string>
+	<string name="Country.New Caledonia">Nowa Kaledonia</string>
+	<string name="Country.New Zealand">Nowa Zelandia</string>
+	<string name="Country.Nicaragua">Nikaragua</string>
+	<string name="Country.Niger">Niger</string>
+	<string name="Country.Nigeria">Nigeria</string>
+	<string name="Country.Niue">Niue</string>
+	<string name="Country.Norfolk Island">Wyspa Norfolk</string>
+	<string name="Country.North Korea">Korea Północna</string>
+	<string name="Country.Northern Mariana Islands">Mariany Północne</string>
+	<string name="Country.Norway">Norwegia</string>
+	<string name="Country.Pakistan">Pakistan</string>
+	<string name="Country.Palestinian territories">Palestyna</string>
+	<string name="Country.Papua New Guinea">Papua-Nowa Gwinea</string>
+	<string name="Country.Paraguay">Paragwaj</string>
+	<string name="Country.Philippines">Filipiny</string>
+	<string name="Country.Pitcairn Islands">Wyspy Pitcairn</string>
+	<string name="Country.Poland">Polska</string>
+	<string name="Country.Portugal">Portugalia</string>
+	<string name="Country.Monaco">Księstwo Monako</string>
+	<string name="Country.Puerto Rico">Portoryko</string>
+	<string name="Country.Qatar">Katar</string>
+	<string name="Country.Réunion">Reunion</string>
+	<string name="Country.Romania">Rumunia</string>
+	<string name="Country.Russia">Rosja</string>
+	<string name="Country.Rwanda">Rwanda</string>
+	<string name="Country.Saint Helena">Święta Helena</string>
+	<string name="Country.Saint Kitts and Nevis">Saint Christopher i Nevis</string>
+	<string name="Country.Saint Lucia">Saint Lucia</string>
+	<string name="Country.Saint Pierre and Miquelon">Saint-Pierre i Miquelon</string>
+	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent i Grenadyny</string>
+	<string name="Country.Samoa">Samoa</string>
+	<string name="Country.San Marino">San Marino</string>
+	<string name="Country.São Tomé and Príncipe">Wyspy Świętego Tomasza i Książęca</string>
+	<string name="Country.Saudi Arabia">Arabia Saudyjska</string>
+	<string name="Country.Scotland">Szkocja</string>
+	<string name="Country.Senegal">Senegal</string>
+	<string name="Country.Serbia">Serbia</string>
+	<string name="Country.Seychelles">Seszele</string>
+	<string name="Country.Sierra Leone">Sierra Leone</string>
+	<string name="Country.Singapore">Singapur</string>
+	<string name="Country.Slovakia">Słowacja</string>
+	<string name="Country.Slovenia">Słowenia</string>
+	<string name="Country.Solomon Islands">Wyspy Salomona</string>
+	<string name="Country.Somalia">Somalia</string>
+	<string name="Country.South Africa">Afryka Południowa</string>
+	<string name="Country.South Georgia and South Sandwich Islands">Georgia Południowa i Sandwich Południowy</string>
+	<string name="Country.South Korea">Korea Południowa</string>
+	<string name="Country.South Ossetia">Osetia Południowa</string>
+	<string name="Country.Spain">Hiszpania</string>
+	<string name="Country.Sri Lanka">Sri Lanka</string>
+	<string name="Country.Sri Lanka">Cejlon</string>
+	<string name="Country.Sudan">Sudan</string>
+	<string name="Country.Suriname">Surinam</string>
+	<string name="Country.Suriname">Gujana Holenderska</string>
+	<string name="Country.Swaziland">Suazi</string>
+	<string name="Country.Sweden">Szwecja</string>
+	<string name="Country.Switzerland">Szwajcaria</string>
+	<string name="Country.Syria">Syria</string>
+	<string name="Country.Free Area of the Republic of China">Tajwan</string>
+	<string name="Country.Free Area of the Republic of China">
+	Colonial name: </string>
+	<string name="Country.Tajikistan">Tadżykistan</string>
+	<string name="Country.Tanzania">Tanzania</string>
+	<string name="Country.Thailand">Tajlandia</string>
+	<string name="Country.Thailand">Syjam</string>
+	<string name="Country.The Gambia">Gambia</string>
+	<string name="Country.Togo">Togo</string>
+	<string name="Country.Tokelau Islands">Tokelau</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Transnistria">Naddniestrze</string>
+	<string name="Country.Trinidad and Tobago">Trinidad i Tobago</string>
+	<string name="Country.Tunisia">Tunezja</string>
+	<string name="Country.Turkey">Turcja</string>
+	<string name="Country.Northern Cyprus">Cypr Północny</string>
+	<string name="Country.Turkmenistan">Turkmenistan</string>
+	<string name="Country.Turks and Caicos Islands">Turks i Caicos</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Uganda</string>
+	<string name="Country.Ukraine">Ukraina</string>
+	<string name="Country.United Arab Emirates"> Zjednoczone Emiraty Arabskie </string>
+	<string name="Country.United Kingdom">Wielka Brytania</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Zjednoczone Królestwo Wielkiej Brytanii i Irlandii Północnej</string>
+	<string name="Country.United States of America">Stany Zjednoczone Ameryki</string>
+	<string name="Country.United States Virgin Islands">Wyspy Dziewicze Stanów Zjednoczonych</string>
+	<string name="Country.Uruguay">Urugwaj</string>
+	<string name="Country.Uzbekistan">Uzbekistan</string>
+	<string name="Country.Vanuatu">Вануату</string>
+	<string name="Country.Vanuatu">Nowe Hebrydy</string>
+	<string name="Country.Vatican City">Watykan</string>
+	<string name="Country.Venezuela">Wenezuela</string>
+	<string name="Country.Vietnam">Wietnam</string>
+	<string name="Country.Wales">Walia</string>
+	<string name="Country.Wallis and Futuna">Wallis i Futuna</string>
+	<string name="Country.Western Sahara">Sahara Zachodnia</string>
+	<string name="Country.Yemen">Jemen</string>
+	<string name="Country.Zambia">Zambia</string>
+	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
