--- a/Language/strings_pt.xml
+++ b/Language/strings_pt.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Filtrar</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favoritos</string>
@@ -18,4 +18,233 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Género:</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Eliminar</string>
   <string name="Webradio.Dialog.Search.Header">Procurar</string>
+	<string name="Country.Afghanistan">Afeganistão</string>
+	<string name="Country.Åland Islands">Alanda</string>
+	<string name="Country.Albania">Albânia</string>
+	<string name="Country.Algeria">Argélia</string>
+	<string name="Country.American Samoa">Samoa Americana</string>
+	<string name="Country.Andorra">Andorra</string>
+	<string name="Country.Anguilla">Anguila</string>
+	<string name="Country.Antigua and Barbuda">Antígua e Barbuda</string>
+	<string name="Country.Argentina">Argentina</string>
+	<string name="Country.Armenia">Arménia</string>
+	<string name="Country.Aruba">Aruba</string>
+	<string name="Country.Australia">Austrália</string>
+	<string name="Country.Austria">Áustria</string>
+	<string name="Country.Azerbaijan">Azerbaijão</string>
+	<string name="Country.Bahamas">Baamas</string>
+	<string name="Country.Bangladesh">Bangladesh</string>
+	<string name="Country.Barbados">Barbados</string>
+	<string name="Country.Belarus">Bielorrússia</string>
+	<string name="Country.Belgium">Bélgica</string>
+	<string name="Country.Belize">Belize</string>
+	<string name="Country.Belize">Honduras Britânicas</string>
+	<string name="Country.Benin">Benim</string>
+	<string name="Country.Benin">Daomé</string>
+	<string name="Country.Bermuda">Bermudas</string>
+	<string name="Country.Bhutan">Butão</string>
+	<string name="Country.Bolivia">Bolívia</string>
+	<string name="Country.Bosnia and Herzegovina">Bósnia-Herzegovina</string>
+	<string name="Country.Botswana">Botsuana</string>
+	<string name="Country.Brazil">Brasil</string>
+	<string name="Country.British Virgin Islands">Ilhas Virgens Britânicas</string>
+	<string name="Country.Brunei">Brunei</string>
+	<string name="Country.Bulgaria">Bulgária</string>
+	<string name="Country.Burkina Faso">Burquina Faso</string>
+	<string name="Country.Burkina Faso">Puuqina Vasu</string>
+	<string name="Country.Burundi">Urundi</string>
+	<string name="Country.Cambodia">Camboja</string>
+	<string name="Country.Cameroon">Camarões</string>
+	<string name="Country.Canada">Canadá</string>
+	<string name="Country.Cape Verde">Cabo Verde</string>
+	<string name="Country.Central African Republic">República Centro-Africana</string>
+	<string name="Country.Chad">Chade</string>
+	<string name="Country.Chile">Chile</string>
+	<string name="Country.China">China</string>
+	<string name="Country.Christmas Island">Ilha do Natal</string>
+	<string name="Country.Colombia">Colômbia</string>
+	<string name="Country.Comoros">Comores</string>
+	<string name="Country.Cook Islands">Ilhas Cook</string>
+	<string name="Country.Costa Rica">Costa Rica</string>
+	<string name="Country.Côte d'Ivoire">Costa do Marfim</string>
+	<string name="Country.Croatia">Croácia</string>
+	<string name="Country.Cyprus">Chipre</string>
+	<string name="Country.Czech Republic">Chéquia</string>
+	<string name="Country.Denmark">Dinamarca</string>
+	<string name="Country.Djibouti">Djibouti</string>
+	<string name="Country.Dominica">Dominica</string>
+	<string name="Country.Dominican Republic">República Dominicana</string>
+	<string name="Country.East Timor">Timor-Leste</string>
+	<string name="Country.Ecuador">Equador</string>
+	<string name="Country.Egypt">Egipto</string>
+	<string name="Country.El Salvador">El Salvador</string>
+	<string name="Country.England">Inglaterra</string>
+	<string name="Country.Equatorial Guinea">Guiné Equatorial</string>
+	<string name="Country.Eritrea">Eritreia</string>
+	<string name="Country.Estonia">Estónia</string>
+	<string name="Country.Ethiopia">Etiópia</string>
+	<string name="Country.Ethiopia">Abissínia</string>
+	<string name="Country.Falkland Islands">Ilhas Malvinas</string>
+	<string name="Country.Faroe Islands">Ilhas Faroé</string>
+	<string name="Country.Fiji">Fiji</string>
+	<string name="Country.Finland">Finlândia</string>
+	<string name="Country.France">França</string>
+	<string name="Country.French Guiana">Guiana Francesa</string>
+	<string name="Country.French Polynesia">Polinésia Francesa</string>
+	<string name="Country.French Southern and Antarctic Lands">Terras Austrais e Antárticas Francesas</string>
+	<string name="Country.Gabon">Gabão</string>
+	<string name="Country.Georgia">Geórgia</string>
+	<string name="Country.Germany">Alemanha</string>
+	<string name="Country.Greece">Grécia</string>
+	<string name="Country.Greenland">Gronelândia</string>
+	<string name="Country.Grenada">Granada</string>
+	<string name="Country.Guadeloupe">Guadalupe</string>
+	<string name="Country.Guam">Guam</string>
+	<string name="Country.Guatemala">Guatemala</string>
+	<string name="Country.Guinea">Guiné</string>
+	<string name="Country.Guinea-Bissau">Guiné-Bissau</string>
+	<string name="Country.Guyana">Guiana</string>
+	<string name="Country.Haiti">Haiti</string>
+	<string name="Country.Holland">Holanda</string>
+	<string name="Country.Holy See">Santa Sé</string>
+	<string name="Country.Hong Kong">Honguecongue</string>
+	<string name="Country.Hungary">Hungria</string>
+	<string name="Country.Iceland">Islândia</string>
+	<string name="Country.India">Índia</string>
+	<string name="Country.Indonesia">Indonésia</string>
+	<string name="Country.Iran">Irão</string>
+	<string name="Country.Iraq">Iraque</string>
+	<string name="Country.Ireland">Irlanda</string>
+	<string name="Country.Italy">Itália</string>
+	<string name="Country.Japan">Japão</string>
+	<string name="Country.Jordan">Jordânia</string>
+	<string name="Country.Jordan">Transjordânia</string>
+	<string name="Country.Kazakhstan">Cazaquistão</string>
+	<string name="Country.Kiribati">Quiribati</string>
+	<string name="Country.Kuwait"> Koweit </string>
+	<string name="Country.Lebanon">Líbano</string>
+	<string name="Country.Lesotho">Lesoto</string>
+	<string name="Country.Liberia">Libéria</string>
+	<string name="Country.Libya">Líbia</string>
+	<string name="Country.Lithuania">Lituânia</string>
+	<string name="Country.Luxembourg">Luxemburgo</string>
+	<string name="Country.Macau">Macau</string>
+	<string name="Country.Madagascar">Madagáscar</string>
+	<string name="Country.Malawi">Malaui</string>
+	<string name="Country.Malawi">Malawi</string>
+	<string name="Country.Malaysia">Malásia</string>
+	<string name="Country.Maldives">Maldivas</string>
+	<string name="Country.Marshall Islands">Ilhas Marshall</string>
+	<string name="Country.Martinique">Martinica</string>
+	<string name="Country.Mauritania">Mauritânia</string>
+	<string name="Country.Mauritius">Maurícias</string>
+	<string name="Country.Mayotte">Mayotte</string>
+	<string name="Country.Mexico">México</string>
+	<string name="Country.Federated States of Micronesia">Micronésia</string>
+	<string name="Country.Moldova">Moldávia</string>
+	<string name="Country.Monaco">Mónaco</string>
+	<string name="Country.Mongolia">Mongólia</string>
+	<string name="Country.Montenegro">Montenegro</string>
+	<string name="Country.Montserrat">Monserrate</string>
+	<string name="Country.Morocco">Marrocos</string>
+	<string name="Country.Mozambique">Moçambique</string>
+	<string name="Country.Myanmar">Myanmar</string>
+	<string name="Country.Myanmar">Birmânia</string>
+	<string name="Country.Namibia">Namíbia</string>
+	<string name="Country.Nauru">Nauru</string>
+	<string name="Country.Nepal">Nepal</string>
+	<string name="Country.Netherlands Antilles">Antilhas Holandesas</string>
+	<string name="Country.Netherlands">Países Baixos</string>
+	<string name="Country.New Caledonia">Nova Caledônia</string>
+	<string name="Country.New Zealand">Nova Zelândia</string>
+	<string name="Country.Nicaragua">Nicarágua</string>
+	<string name="Country.Niger">Níger</string>
+	<string name="Country.Nigeria">Nigéria</string>
+	<string name="Country.Niue">Niue</string>
+	<string name="Country.Norfolk Island">Ilha Norfolk</string>
+	<string name="Country.North Korea">Coreia do Norte</string>
+	<string name="Country.Northern Mariana Islands">Marianas Setentrionais</string>
+	<string name="Country.Norway">Noruega</string>
+	<string name="Country.Pakistan">Paquistão</string>
+	<string name="Country.Palestinian territories">Palestina</string>
+	<string name="Country.Panama">Panamá</string>
+	<string name="Country.Papua New Guinea">Papua-Nova Guiné</string>
+	<string name="Country.Paraguay">Paraguai</string>
+	<string name="Country.Philippines">Filipinas</string>
+	<string name="Country.Pitcairn Islands">Pitcairn</string>
+	<string name="Country.Poland">Polónia</string>
+	<string name="Country.Portugal">Portugal</string>
+	<string name="Country.Monaco">Principado do Mónaco</string>
+	<string name="Country.Puerto Rico">Porto Rico</string>
+	<string name="Country.Qatar">Qatar</string>
+	<string name="Country.Réunion">Reunião</string>
+	<string name="Country.Romania">Roménia</string>
+	<string name="Country.Russia">Rússia</string>
+	<string name="Country.Rwanda">Ruanda</string>
+	<string name="Country.Saint Helena">Santa Helena</string>
+	<string name="Country.Saint Kitts and Nevis">Saint Kitts e Nevis</string>
+	<string name="Country.Saint Lucia">Santa Lúcia</string>
+	<string name="Country.Saint Pierre and Miquelon">Saint Pierre e Miquelon</string>
+	<string name="Country.Saint Vincent and the Grenadines">São Vicente e as Granadinas</string>
+	<string name="Country.Samoa">Samoa</string>
+	<string name="Country.São Tomé and Príncipe">São Tomé e Príncipe</string>
+	<string name="Country.Saudi Arabia">Arábia Saudita</string>
+	<string name="Country.Scotland">Escócia</string>
+	<string name="Country.Senegal">Senegal</string>
+	<string name="Country.Serbia">Sérvia</string>
+	<string name="Country.Seychelles">Seychelles</string>
+	<string name="Country.Sierra Leone">Serra Leoa</string>
+	<string name="Country.Singapore">Singapura</string>
+	<string name="Country.Slovakia">Eslováquia</string>
+	<string name="Country.Slovenia">Eslovénia</string>
+	<string name="Country.Solomon Islands">Ilhas Salomão</string>
+	<string name="Country.Somalia">Somália</string>
+	<string name="Country.South Africa">África do Sul</string>
+	<string name="Country.South Georgia and South Sandwich Islands">Ilhas Geórgia do Sul e Sandwich do Sul</string>
+	<string name="Country.South Korea">Coreia do Sul</string>
+	<string name="Country.South Ossetia">Ossétia do Sul</string>
+	<string name="Country.Spain">Espanha</string>
+	<string name="Country.Sri Lanka">Sri Lanka</string>
+	<string name="Country.Sri Lanka">Ceilão</string>
+	<string name="Country.Sudan">Sudão</string>
+	<string name="Country.Suriname">Suriname</string>
+	<string name="Country.Swaziland">Suazilândia</string>
+	<string name="Country.Sweden">Suécia</string>
+	<string name="Country.Switzerland">Suíça</string>
+	<string name="Country.Syria">Síria</string>
+	<string name="Country.Free Area of the Republic of China">Taiwan</string>
+	<string name="Country.Free Area of the Republic of China">
+	Colonial name: </string>
+	<string name="Country.Tajikistan">Tajiquistão</string>
+	<string name="Country.Tanzania">Tanzânia</string>
+	<string name="Country.Thailand">Tailândia</string>
+	<string name="Country.Thailand">Sião</string>
+	<string name="Country.The Gambia">Gâmbia</string>
+	<string name="Country.Togo">Togo</string>
+	<string name="Country.Tokelau Islands">Toquelau</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Transnistria">Transnístria</string>
+	<string name="Country.Trinidad and Tobago">Trindade e Tobago</string>
+	<string name="Country.Tunisia">Tunísia</string>
+	<string name="Country.Turkey">Turquia</string>
+	<string name="Country.Turkmenistan">Turquemenistão</string>
+	<string name="Country.Turks and Caicos Islands">Turcas e Caicos</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Uganda</string>
+	<string name="Country.Ukraine">Ucrânia</string>
+	<string name="Country.United Arab Emirates"> Emiratos Árabes Unidos </string>
+	<string name="Country.United Kingdom">Reino Unido</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Reino Unido da Grã-Bretanha e Irlanda do Norte</string>
+	<string name="Country.Uruguay">Uruguai</string>
+	<string name="Country.Uzbekistan">Uzbequistão</string>
+	<string name="Country.Vatican City">Cidade do Vaticano</string>
+	<string name="Country.Vatican City">Vaticano</string>
+	<string name="Country.Venezuela">Venezuela</string>
+	<string name="Country.Vietnam">Vietname</string>
+	<string name="Country.Wales">País de Gales</string>
+	<string name="Country.Wallis and Futuna">Wallis e Futuna</string>
+	<string name="Country.Western Sahara">Saara Ocidental</string>
+	<string name="Country.Yemen">Iémen</string>
+	<string name="Country.Zambia">Zâmbia</string>
+	<string name="Country.Zimbabwe">Zimbabue</string>
 </resources>
