--- a/Language/strings_tr.xml
+++ b/Language/strings_tr.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favorites</string>
@@ -18,4 +18,175 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Sil</string>
   <string name="Webradio.Dialog.Search.Header">Ara</string>
+	<string name="Country.Afghanistan">Afganistan</string>
+	<string name="Country.Albania">Arnavutluk</string>
+	<string name="Country.Algeria">Cezayir</string>
+	<string name="Country.Andorra">Andora</string>
+	<string name="Country.Antigua and Barbuda">Antigua ve Barbuda</string>
+	<string name="Country.Argentina">Arjantin</string>
+	<string name="Country.Armenia">Ermenistan</string>
+	<string name="Country.Australia">Avustralya</string>
+	<string name="Country.Austria">Avusturya</string>
+	<string name="Country.Azerbaijan">Azerbaycan</string>
+	<string name="Country.Bahamas">Bahama</string>
+	<string name="Country.Bahrain">Bahreyn</string>
+	<string name="Country.Bangladesh">Bangladeş</string>
+	<string name="Country.Belarus">Beyaz Rusya</string>
+	<string name="Country.Belgium">Belçika</string>
+	<string name="Country.Belize">Belize</string>
+	<string name="Country.Bhutan">Bhutan</string>
+	<string name="Country.Bolivia">Bolivya</string>
+	<string name="Country.Bosnia and Herzegovina">Bosna Hersek</string>
+	<string name="Country.Botswana">Botsvana</string>
+	<string name="Country.Brazil">Brezilya</string>
+	<string name="Country.Brunei">Bruney</string>
+	<string name="Country.Bulgaria">Bulgaristan</string>
+	<string name="Country.Cambodia">Kamboçya</string>
+	<string name="Country.Cameroon">Kamerun</string>
+	<string name="Country.Canada">Kanada</string>
+	<string name="Country.Cape Verde">Cape Verde</string>
+	<string name="Country.Central African Republic">Orta Afrika Cumhuriyeti</string>
+	<string name="Country.Chad">Çad</string>
+	<string name="Country.Chile">Şili</string>
+	<string name="Country.China">Çin</string>
+	<string name="Country.Colombia">Kolombiya</string>
+	<string name="Country.Comoros">Comoros</string>
+	<string name="Country.Côte d'Ivoire">Fildişi Kıyısı</string>
+	<string name="Country.Croatia">Hırvatistan</string>
+	<string name="Country.Cuba">Küba</string>
+	<string name="Country.Cyprus">Kıbrıs</string>
+	<string name="Country.Czech Republic">Çekiye</string>
+	<string name="Country.Denmark">Danimarka</string>
+	<string name="Country.Djibouti">Cibuti</string>
+	<string name="Country.Dominica">Dominika</string>
+	<string name="Country.Dominican Republic">Dominik Cumhuriyeti</string>
+	<string name="Country.East Timor">Doğu Timor</string>
+	<string name="Country.Ecuador">Ekvador</string>
+	<string name="Country.Egypt">Mısır</string>
+	<string name="Country.El Salvador">El Salvador</string>
+	<string name="Country.Equatorial Guinea">Ekvator Ginesi</string>
+	<string name="Country.Eritrea">Eritre</string>
+	<string name="Country.Estonia">Estonya</string>
+	<string name="Country.Ethiopia">Etiyopya</string>
+	<string name="Country.Ethiopia">Habeşistan</string>
+	<string name="Country.Faroe Islands">Faroe Adaları</string>
+	<string name="Country.Finland">Finlandiya</string>
+	<string name="Country.France">Fransa</string>
+	<string name="Country.French Guiana">Fransız Guyanası</string>
+	<string name="Country.French Polynesia">Fransız Polinezyası</string>
+	<string name="Country.Georgia">Gürcistan</string>
+	<string name="Country.Germany">Almanya</string>
+	<string name="Country.Greece">Yunanistan</string>
+	<string name="Country.Guinea">Gine</string>
+	<string name="Country.Holland">Hollanda</string>
+	<string name="Country.Hungary">Macaristan</string>
+	<string name="Country.Iceland">İzlanda</string>
+	<string name="Country.India">Hindistan</string>
+	<string name="Country.Indonesia">Endonezya</string>
+	<string name="Country.Iran">İran</string>
+	<string name="Country.Iran">Pers</string>
+	<string name="Country.Iraq">Irak</string>
+	<string name="Country.Ireland">İrlanda</string>
+	<string name="Country.Israel">İsrail</string>
+	<string name="Country.Italy">İtalya</string>
+	<string name="Country.Jamaica">Jamaika</string>
+	<string name="Country.Japan">Japonya</string>
+	<string name="Country.Jordan">Ürdün</string>
+	<string name="Country.Jordan">Mavera-i Ürdün</string>
+	<string name="Country.Kazakhstan">Kazakistan</string>
+	<string name="Country.Kenya">Kenya</string>
+	<string name="Country.Korea">Kore</string>
+	<string name="Country.Kuwait"> Kuveyt </string>
+	<string name="Country.Kyrgyzstan">Kırgızistan</string>
+	<string name="Country.Latvia">Letonya</string>
+	<string name="Country.Lebanon">Lübnan</string>
+	<string name="Country.Liberia">Liberya</string>
+	<string name="Country.Libya">Libya</string>
+	<string name="Country.Liechtenstein">Lihtenştayn</string>
+	<string name="Country.Lithuania">Litvanya</string>
+	<string name="Country.Luxembourg">Lüksemburg</string>
+	<string name="Country.Republic of Macedonia">Makedonya</string>
+	<string name="Country.Madagascar">Madagaskar</string>
+	<string name="Country.Malaysia">Malezya</string>
+	<string name="Country.Maldives">Maldivler</string>
+	<string name="Country.Marshall Islands">Marshall Adaları</string>
+	<string name="Country.Mauritania">Moritanya</string>
+	<string name="Country.Mexico">Meksika</string>
+	<string name="Country.Federated States of Micronesia">Mikronezya</string>
+	<string name="Country.Moldova">Moldova</string>
+	<string name="Country.Moldova">Moldobiya</string>
+	<string name="Country.Monaco">Monako</string>
+	<string name="Country.Mongolia">Moğolistan</string>
+	<string name="Country.Montenegro">Karadağ</string>
+	<string name="Country.Morocco">Fas</string>
+	<string name="Country.Mozambique">Mozambik</string>
+	<string name="Country.Myanmar">Myanmar</string>
+	<string name="Country.Myanmar">Birmanya</string>
+	<string name="Country.Namibia">Namibya</string>
+	<string name="Country.Nepal">Nepal</string>
+	<string name="Country.Netherlands">Hollanda</string>
+	<string name="Country.New Zealand">Yeni Zelanda</string>
+	<string name="Country.Nicaragua">Nikaragua</string>
+	<string name="Country.Niger">Nijer</string>
+	<string name="Country.Nigeria">Nijerya</string>
+	<string name="Country.Norway">Norveç</string>
+	<string name="Country.Pakistan">Pakistan</string>
+	<string name="Country.Palestinian territories">Filistin</string>
+	<string name="Country.Paraguay">Paraguay</string>
+	<string name="Country.Philippines">Filipinler</string>
+	<string name="Country.Poland">Polonya</string>
+	<string name="Country.Portugal">Portekiz</string>
+	<string name="Country.Monaco">Monako Prensliği</string>
+	<string name="Country.Puerto Rico">Porto Riko</string>
+	<string name="Country.Qatar">Katar</string>
+	<string name="Country.Romania">Romanya</string>
+	<string name="Country.Russia">Rusya</string>
+	<string name="Country.Rwanda">Ruanda</string>
+	<string name="Country.San Marino">San Marino</string>
+	<string name="Country.Saudi Arabia">Suudi Arabistan</string>
+	<string name="Country.Scotland">İskoçya</string>
+	<string name="Country.Senegal">Senegal</string>
+	<string name="Country.Serbia">Sırbistan</string>
+	<string name="Country.Seychelles">Seyşeller</string>
+	<string name="Country.Singapore">Singapur</string>
+	<string name="Country.Slovakia">Slovakya</string>
+	<string name="Country.Slovenia">Slovenya</string>
+	<string name="Country.Somalia">Somali</string>
+	<string name="Country.South Africa">Güney Afrika</string>
+	<string name="Country.South Korea">Güney Kore</string>
+	<string name="Country.South Ossetia">Güney Osetya</string>
+	<string name="Country.Spain">İspanya</string>
+	<string name="Country.Sri Lanka">Sri Lanka</string>
+	<string name="Country.Sudan">Sudan</string>
+	<string name="Country.Suriname">Surinam</string>
+	<string name="Country.Sweden">İsveç</string>
+	<string name="Country.Switzerland">İsviçre</string>
+	<string name="Country.Syria">Suriye</string>
+	<string name="Country.Free Area of the Republic of China">Tayvan</string>
+	<string name="Country.Tajikistan">Tacikistan</string>
+	<string name="Country.Tanzania">Tanzanya</string>
+	<string name="Country.Thailand">Tayland</string>
+	<string name="Country.Togo">Togo</string>
+	<string name="Country.Tonga">Tonga</string>
+	<string name="Country.Trinidad and Tobago">Trinidad ve Tobago</string>
+	<string name="Country.Tunisia">Tunus</string>
+	<string name="Country.Turkey">Türkiye</string>
+	<string name="Country.Northern Cyprus">Kuzey Kıbrıs</string>
+	<string name="Country.Turkmenistan">Türkmenistan</string>
+	<string name="Country.Tuvalu">Tuvalu</string>
+	<string name="Country.Uganda">Uganda</string>
+	<string name="Country.Ukraine">Ukrayna</string>
+	<string name="Country.United Arab Emirates"> Birleşik Arap Emirlikleri </string>
+	<string name="Country.United Kingdom">Birleşik Krallık</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Büyük Britanya ve Kuzey İrlanda Birleşik Krallığı</string>
+	<string name="Country.United States of America">Amerika Birleşik Devletleri</string>
+	<string name="Country.Uruguay">Uruguay</string>
+	<string name="Country.Uzbekistan">Özbekistan</string>
+	<string name="Country.Vatican City">Vatikan</string>
+	<string name="Country.Vietnam">Vietnam</string>
+	<string name="Country.Wales">Galler</string>
+	<string name="Country.Western Sahara">Batı Sahra</string>
+	<string name="Country.Yemen">Yemen</string>
+	<string name="Country.Zambia">Zambiya</string>
+	<string name="Country.Zimbabwe">Zimbabve</string>
 </resources>
