--- a/Language/strings_uk.xml
+++ b/Language/strings_uk.xml
@@ -1,8 +1,241 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.Settings">Налаштування</string>
   <string name="Webradio.Settings.ScreenTitle">Налаштування</string>
   <string name="Webradio.Favorites.Add">Додати</string>
   <string name="Webradio.Filter.Add">Додати</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Жанр</string>
+	<string name="Country.Afghanistan">Афганістан</string>
+	<string name="Country.Åland Islands">Аландські острови</string>
+	<string name="Country.Albania">Албанія</string>
+	<string name="Country.Algeria">Алжир</string>
+	<string name="Country.American Samoa">Східне Самоа</string>
+	<string name="Country.Andorra">Андорра</string>
+	<string name="Country.Angola">Ангола</string>
+	<string name="Country.Anguilla">Ангілья</string>
+	<string name="Country.Antigua and Barbuda">Антигуа і Барбуда</string>
+	<string name="Country.Argentina">Аргентина</string>
+	<string name="Country.Armenia">Вірменія</string>
+	<string name="Country.Aruba">Аруба</string>
+	<string name="Country.Australia">Австралія</string>
+	<string name="Country.Austria">Австрія</string>
+	<string name="Country.Azerbaijan">Азербайджан</string>
+	<string name="Country.Bahamas">Багами</string>
+	<string name="Country.Bahrain">Бахрейн</string>
+	<string name="Country.Bangladesh">Бангладеш</string>
+	<string name="Country.Barbados">Барбадос</string>
+	<string name="Country.Belarus">Білорусь</string>
+	<string name="Country.Belgium">Бельгія</string>
+	<string name="Country.Belize">Беліз</string>
+	<string name="Country.Benin">Бенін</string>
+	<string name="Country.Benin">Дагомея</string>
+	<string name="Country.Bhutan">Бутан</string>
+	<string name="Country.Bolivia">Болівія</string>
+	<string name="Country.Bosnia and Herzegovina">Боснія і Герцеговина</string>
+	<string name="Country.Botswana">Ботсвана</string>
+	<string name="Country.Brazil">Бразилія</string>
+	<string name="Country.British Virgin Islands">Британські Віргінські острови</string>
+	<string name="Country.Brunei">Бруней</string>
+	<string name="Country.Bulgaria">Болгарія</string>
+	<string name="Country.Burkina Faso">Буркіна Фасо</string>
+	<string name="Country.Burundi">Бурунді</string>
+	<string name="Country.Cambodia">Камбоджа</string>
+	<string name="Country.Cameroon">Камерун</string>
+	<string name="Country.Canada">Канада</string>
+	<string name="Country.Cape Verde">Kabo-Verde</string>
+	<string name="Country.Cayman Islands">Кайманові острови</string>
+	<string name="Country.Chad">Чад</string>
+	<string name="Country.Chile">Чилі</string>
+	<string name="Country.China">Китай</string>
+	<string name="Country.Christmas Island">Острів Різдва</string>
+	<string name="Country.Cocos (Keeling) Islands">Кокосові острови</string>
+	<string name="Country.Colombia">Колумбія</string>
+	<string name="Country.Comoros">Коморські острови</string>
+	<string name="Country.Cook Islands">Острови Кука</string>
+	<string name="Country.Costa Rica">Kosta-Rika</string>
+	<string name="Country.Côte d'Ivoire">Kot-d'Ivuar</string>
+	<string name="Country.Croatia">Хорватія</string>
+	<string name="Country.Cuba">Куба</string>
+	<string name="Country.Cyprus">Кіпр</string>
+	<string name="Country.Czech Republic">Чехія</string>
+	<string name="Country.Denmark">Данія</string>
+	<string name="Country.Djibouti">Джибуті</string>
+	<string name="Country.Dominica">Домініка</string>
+	<string name="Country.Dominican Republic">Домініканська Республіка</string>
+	<string name="Country.East Timor">Східний Тимор</string>
+	<string name="Country.Ecuador">Еквадор</string>
+	<string name="Country.Egypt">Єгипет</string>
+	<string name="Country.El Salvador">Сальвадор</string>
+	<string name="Country.Equatorial Guinea">Екваторіальна Гвінея</string>
+	<string name="Country.Eritrea">Еритрея</string>
+	<string name="Country.Estonia">Естония</string>
+	<string name="Country.Ethiopia">Ефіопія</string>
+	<string name="Country.Falkland Islands">Фолклендські острови</string>
+	<string name="Country.Faroe Islands">Фарерські острови</string>
+	<string name="Country.Fiji">Фіджі</string>
+	<string name="Country.Finland">Фінляндія</string>
+	<string name="Country.France">Фpaнція</string>
+	<string name="Country.French Guiana">Французька Гвіана</string>
+	<string name="Country.French Polynesia">Французька Полінезія</string>
+	<string name="Country.French Southern and Antarctic Lands">Французькі Південні і Антарктичні території</string>
+	<string name="Country.Gabon">Габон</string>
+	<string name="Country.Georgia">Грузія</string>
+	<string name="Country.Germany">Німеччина</string>
+	<string name="Country.Ghana">Ґана</string>
+	<string name="Country.Gibraltar">Гібралтар</string>
+	<string name="Country.Guyana">Гаяна</string>
+	<string name="Country.Haiti">Гаїті</string>
+	<string name="Country.Holland">Голландія</string>
+	<string name="Country.Holy See">Svyatiyshyi Prestol</string>
+	<string name="Country.Honduras">Гондурас</string>
+	<string name="Country.Hong Kong">Гонконг</string>
+	<string name="Country.Hungary">Угорщина</string>
+	<string name="Country.Iceland">Іcлaндія</string>
+	<string name="Country.India">Індія</string>
+	<string name="Country.Indonesia">Індонезія</string>
+	<string name="Country.Iran">Іран</string>
+	<string name="Country.Iraq">Ірак</string>
+	<string name="Country.Ireland">Іpлaндія</string>
+	<string name="Country.Israel">Ізpaїль</string>
+	<string name="Country.Italy">Ітaлія</string>
+	<string name="Country.Jamaica">Ямайка</string>
+	<string name="Country.Japan">Япoнія</string>
+	<string name="Country.Jordan">Йорданія</string>
+	<string name="Country.Kazakhstan">Казахстан</string>
+	<string name="Country.Kenya">Кенія</string>
+	<string name="Country.Kiribati">Кірибаті</string>
+	<string name="Country.Korea">Корея</string>
+	<string name="Country.Kuwait">Кувейт</string>
+	<string name="Country.Kyrgyzstan">Киргизстан</string>
+	<string name="Country.Laos">Лаос</string>
+	<string name="Country.Latvia">Латвія</string>
+	<string name="Country.Lebanon">Ливaн</string>
+	<string name="Country.Lesotho">Лесото</string>
+	<string name="Country.Liberia">Либерия</string>
+	<string name="Country.Libya">Ливия</string>
+	<string name="Country.Liechtenstein">Ліхтенштейн</string>
+	<string name="Country.Lithuania">Литва</string>
+	<string name="Country.Lithuania">Литва</string>
+	<string name="Country.Luxembourg">Люкceмбуpг</string>
+	<string name="Country.Macau">Макао</string>
+	<string name="Country.Republic of Macedonia">Македонія</string>
+	<string name="Country.Madagascar">Мадагаскар</string>
+	<string name="Country.Malawi">Малави</string>
+	<string name="Country.Malaysia">Малайзія</string>
+	<string name="Country.Maldives">Мальдіви</string>
+	<string name="Country.Malta">Мальта</string>
+	<string name="Country.Marshall Islands">Маршаллові острови</string>
+	<string name="Country.Mauritania">Мавританія</string>
+	<string name="Country.Mauritius">Маврикій</string>
+	<string name="Country.Mayotte">Майотта</string>
+	<string name="Country.Mexico">Meкcикa</string>
+	<string name="Country.Federated States of Micronesia">Микронезия</string>
+	<string name="Country.Moldova">Молдова</string>
+	<string name="Country.Monaco">Монако</string>
+	<string name="Country.Mongolia">Монголия</string>
+	<string name="Country.Montenegro">Чоpнoгopія</string>
+	<string name="Country.Montserrat">Монсеррат</string>
+	<string name="Country.Morocco">Марокко</string>
+	<string name="Country.Mozambique">Мозамбік</string>
+	<string name="Country.Myanmar">М'янма</string>
+	<string name="Country.Namibia">Намібія</string>
+	<string name="Country.Nauru">Науру</string>
+	<string name="Country.Nepal">Непал</string>
+	<string name="Country.Netherlands Antilles">Нідерландські Антили</string>
+	<string name="Country.Netherlands">Нідерланди</string>
+	<string name="Country.New Caledonia">Нова Каледония</string>
+	<string name="Country.New Zealand">Нова Зеландія</string>
+	<string name="Country.Nicaragua">Нікарагуа</string>
+	<string name="Country.Niger">Нігер</string>
+	<string name="Country.Nigeria">Нігерыя</string>
+	<string name="Country.Niue">Ніуе</string>
+	<string name="Country.Norfolk Island">Острів Норфолк</string>
+	<string name="Country.North Korea">Північна Корея</string>
+	<string name="Country.Northern Mariana Islands">Північні Маріанські Острови</string>
+	<string name="Country.Norway">Норвегія</string>
+	<string name="Country.Oman">Оман</string>
+	<string name="Country.Pakistan">Пакистан</string>
+	<string name="Country.Palau">Палау</string>
+	<string name="Country.Palestinian territories">Палестина</string>
+	<string name="Country.Panama">Панама</string>
+	<string name="Country.Papua New Guinea">Папуа Нова Гвинея</string>
+	<string name="Country.Paraguay">Параґвай</string>
+	<string name="Country.Peru">Перу</string>
+	<string name="Country.Philippines">Філіпіни</string>
+	<string name="Country.Philippines">Філіппіни</string>
+	<string name="Country.Pitcairn Islands">Острови Піткерн</string>
+	<string name="Country.Poland">Польща</string>
+	<string name="Country.Portugal">Португалія</string>
+	<string name="Country.Monaco">Князівство Монако</string>
+	<string name="Country.Puerto Rico">Пуерто-Рико</string>
+	<string name="Country.Qatar">Катар</string>
+	<string name="Country.Réunion">Реюньйон</string>
+	<string name="Country.Romania">Румунія</string>
+	<string name="Country.Russia">Росія</string>
+	<string name="Country.Rwanda">Руанда</string>
+	<string name="Country.Saint Helena">Острів Святої Єлени</string>
+	<string name="Country.Saint Kitts and Nevis">Sent-Kitts i Nevis</string>
+	<string name="Country.Saint Lucia">Sent-Lusiya</string>
+	<string name="Country.Saint Pierre and Miquelon">Sen-P'jer i Mikelon</string>
+	<string name="Country.Saint Vincent and the Grenadines"> Sent-Vinsent i Grenadiny </string>
+	<string name="Country.Samoa">Самоа</string>
+	<string name="Country.San Marino">San-Maryno</string>
+	<string name="Country.São Tomé and Príncipe">San-Tome i Prynsipi</string>
+	<string name="Country.Saudi Arabia">Саудівська Аравія</string>
+	<string name="Country.Scotland">Шотландiя</string>
+	<string name="Country.Senegal">Сенегал</string>
+	<string name="Country.Serbia">Cepбія</string>
+	<string name="Country.Seychelles">Сейшельські острови</string>
+	<string name="Country.Sierra Leone">S'yerra-Leone</string>
+	<string name="Country.Singapore">Сінгапур</string>
+	<string name="Country.Slovakia">Словаччина</string>
+	<string name="Country.Slovenia">Словенія</string>
+	<string name="Country.Solomon Islands">Соломонові Острови</string>
+	<string name="Country.Somalia">Сомалі</string>
+	<string name="Country.South Africa">Pivdenno-Afrykans'ka respublika</string>
+	<string name="Country.South Georgia and South Sandwich Islands">Південна Джорджія та Південні Сандвічеві острови</string>
+	<string name="Country.South Korea">Південна Корея</string>
+	<string name="Country.South Ossetia">Південна Осетія</string>
+	<string name="Country.Spain">Испания</string>
+	<string name="Country.Sri Lanka">Shri-Lanka</string>
+	<string name="Country.Sudan">Судан</string>
+	<string name="Country.Swaziland">Свазіленд</string>
+	<string name="Country.Sweden">Швeция</string>
+	<string name="Country.Switzerland">Швeйцapия</string>
+	<string name="Country.Syria">Сирія</string>
+	<string name="Country.Free Area of the Republic of China">Тайвань</string>
+	<string name="Country.Free Area of the Republic of China">Формоза</string>
+	<string name="Country.Tajikistan">Таджикистан</string>
+	<string name="Country.Tanzania">Танзания</string>
+	<string name="Country.Thailand">Таїланд</string>
+	<string name="Country.Thailand">Сіам</string>
+	<string name="Country.The Gambia">Гамбия</string>
+	<string name="Country.Togo">Того</string>
+	<string name="Country.Tokelau Islands">Токелау</string>
+	<string name="Country.Tonga">Тонга</string>
+	<string name="Country.Transnistria">Придністровська Молдавська Республіка</string>
+	<string name="Country.Trinidad and Tobago">Тринідад і Тобаго</string>
+	<string name="Country.Tunisia">Тунис</string>
+	<string name="Country.Turkey">Туреччина</string>
+	<string name="Country.Turkmenistan">Туркменистан</string>
+	<string name="Country.Turks and Caicos Islands">Теркс і Кайкос</string>
+	<string name="Country.Tuvalu">Тувалу</string>
+	<string name="Country.Uganda">Уганда</string>
+	<string name="Country.Ukraine">Україна</string>
+	<string name="Country.United Arab Emirates"> Objednani Arabs'ki Emiraty </string>
+	<string name="Country.United Kingdom">Spolučene Korolivstvo</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Сполучене Королівство Великої Британії та Північної Ірландії</string>
+	<string name="Country.United States Virgin Islands">Американські Віргінські острови</string>
+	<string name="Country.Uruguay">Уругвай</string>
+	<string name="Country.Uzbekistan">Узбекистан</string>
+	<string name="Country.Vanuatu">Вануату</string>
+	<string name="Country.Vatican City">Ватикан</string>
+	<string name="Country.Venezuela">Венесуела</string>
+	<string name="Country.Vietnam">В'єтнам</string>
+	<string name="Country.Wales">Уельс</string>
+	<string name="Country.Wallis and Futuna">Волліс і Футуна</string>
+	<string name="Country.Western Sahara">Західна Сахара</string>
+	<string name="Country.Yemen">Ємен</string>
+	<string name="Country.Zambia">Замбія</string>
+	<string name="Country.Zimbabwe">Зімбабве</string>
 </resources>
