--- a/Language/strings_vi.xml
+++ b/Language/strings_vi.xml
@@ -1,6 +1,73 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.Settings">Thiết lập</string>
   <string name="Webradio.Settings.ScreenTitle">Thiết lập</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Loại</string>
+	<string name="Country.Albania">Albania</string>
+	<string name="Country.Argentina">Á Căn Đình</string>
+	<string name="Country.Austria">Áo</string>
+	<string name="Country.Bahrain">Ba-ren</string>
+	<string name="Country.Belgium">Bỉ</string>
+	<string name="Country.Benin">Bê-nanh</string>
+	<string name="Country.Benin">Dahomey</string>
+	<string name="Country.Bermuda">Bermuda</string>
+	<string name="Country.Brazil">Ba Tây</string>
+	<string name="Country.Bulgaria">A' Bảo Gia Lợi</string>
+	<string name="Country.Cambodia">Campuchia</string>
+	<string name="Country.Canada">Ca-na-đa</string>
+	<string name="Country.Central African Republic">Cộng Hòa Trung Phi</string>
+	<string name="Country.Chad">Sát</string>
+	<string name="Country.Chile">Chí Lợi</string>
+	<string name="Country.China">Trung Quốc</string>
+	<string name="Country.Côte d'Ivoire">Bờ Biển Ngà</string>
+	<string name="Country.Cuba">Cu-ba</string>
+	<string name="Country.Cyprus">Síp</string>
+	<string name="Country.Czech Republic">Cộng Hoà Séc</string>
+	<string name="Country.Denmark">Đan Mạch</string>
+	<string name="Country.Egypt">Ai Cập</string>
+	<string name="Country.Finland">Phần Lan</string>
+	<string name="Country.France">Nước Phap</string>
+	<string name="Country.Georgia">Grusia</string>
+	<string name="Country.Germany">Đức Quốc</string>
+	<string name="Country.Greece">Hy Lạp</string>
+	<string name="Country.Holland">Hà Lan</string>
+	<string name="Country.Hong Kong">Hồng Kông</string>
+	<string name="Country.Japan">Nhật Bản</string>
+	<string name="Country.Korea">Hàn Quốc</string>
+	<string name="Country.Laos">Lào</string>
+	<string name="Country.Luxembourg">Lục Xâm Bảo</string>
+	<string name="Country.Macau">Áo Môn</string>
+	<string name="Country.Malaysia">Mã Lai</string>
+	<string name="Country.Mexico">Mễ Tây Cơ</string>
+	<string name="Country.Myanmar">Miến Điện</string>
+	<string name="Country.Netherlands">Hà Lan</string>
+	<string name="Country.New Zealand">Tân Tây Lan</string>
+	<string name="Country.North Korea">Triều Tiên</string>
+	<string name="Country.Norway">Na Uy</string>
+	<string name="Country.Philippines">Philippines</string>
+	<string name="Country.Poland">Ba Lan</string>
+	<string name="Country.Portugal">Bồ Đào Nha</string>
+	<string name="Country.Qatar">Ca-ta</string>
+	<string name="Country.Romania">Ru-ma-ni</string>
+	<string name="Country.Russia">Nga/Liên Xô</string>
+	<string name="Country.Rwanda">R-quan-đa</string>
+	<string name="Country.Samoa">Xa-moa</string>
+	<string name="Country.Saudi Arabia">Ả rập Xê-Út</string>
+	<string name="Country.Senegal">Xê-nê-gan</string>
+	<string name="Country.Serbia">Nam Tư</string>
+	<string name="Country.Singapore">Xin-ga-po</string>
+	<string name="Country.Somalia">Xô-ma-li</string>
+	<string name="Country.South Africa">Nam Phi</string>
+	<string name="Country.South Korea">Hàn Quốc</string>
+	<string name="Country.Spain">Tây Ban Nha</string>
+	<string name="Country.Sudan">Xu Đan</string>
+	<string name="Country.Sweden">Thụy Điển</string>
+	<string name="Country.Switzerland">Thụy Sĩ</string>
+	<string name="Country.Syria">Xi-ri</string>
+	<string name="Country.Free Area of the Republic of China">Đài Loan</string>
+	<string name="Country.Thailand">Thái Lan</string>
+	<string name="Country.Togo">Tô Gô</string>
+	<string name="Country.Turkey">Thổ Nhĩ Kì</string>
+	<string name="Country.Ukraine">Úc-rai-na</string>
+	<string name="Country.Vietnam">Việt Nam</string>
 </resources>
