--- a/Language/strings_zh.xml
+++ b/Language/strings_zh.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">过滤器</string>
   <string name="Webradio.Home.Menu.ShowFavorites">收藏夹</string>
@@ -13,4 +13,64 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">流派</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">删除</string>
   <string name="Webradio.Dialog.Search.Header">搜索</string>
+	<string name="Country.Algeria">阿爾及利亞 / 阿尔及利亚</string>
+	<string name="Country.Argentina">阿根廷</string>
+	<string name="Country.Bhutan">不丹</string>
+	<string name="Country.China">中國 / 中国</string>
+	<string name="Country.India">印度</string>
+	<string name="Country.Indonesia">Yìndùnìxīyà</string>
+	<string name="Country.Jordan">約旦/约旦</string>
+	<string name="Country.Morocco">摩洛哥</string>
+	<string name="Country.Romania">羅馬尼亞/罗马尼亚</string>
+	<string name="Country.Russia">Éluósī</string>
+	<string name="Country.Rwanda">盧安達</string>
+	<string name="Country.Saint Kitts and Nevis">Shèng Jīsī-Níwéisī</string>
+	<string name="Country.Saint Lucia">聖露西亞</string>
+	<string name="Country.Saint Vincent and the Grenadines"> Shèng Wénsēn-Géruìnàdīng </string>
+	<string name="Country.Samoa">薩摩亞</string>
+	<string name="Country.San Marino">聖馬利諾</string>
+	<string name="Country.São Tomé and Príncipe">Shèng Dūoměi-Pǔlínxībì</string>
+	<string name="Country.Senegal">塞內加爾</string>
+	<string name="Country.Serbia">塞爾維亞</string>
+	<string name="Country.Seychelles">塞席爾</string>
+	<string name="Country.Slovakia">斯洛伐克</string>
+	<string name="Country.Slovenia">斯洛維尼亞</string>
+	<string name="Country.Solomon Islands">索羅門群島 or 所羅門群島</string>
+	<string name="Country.Somalia">Suǒmǎlǐ</string>
+	<string name="Country.Spain">西班牙</string>
+	<string name="Country.Sri Lanka">斯里兰卡/斯里蘭卡</string>
+	<string name="Country.Sudan">苏丹/蘇丹</string>
+	<string name="Country.Suriname">蘇利南/苏里南</string>
+	<string name="Country.Swaziland">Sīwēishìlán</string>
+	<string name="Country.Sweden">瑞典</string>
+	<string name="Country.Switzerland">瑞士</string>
+	<string name="Country.Syria">敘利亞</string>
+	<string name="Country.Free Area of the Republic of China">臺灣 / 台湾</string>
+	<string name="Country.Tajikistan">塔吉克斯坦</string>
+	<string name="Country.Tanzania">坦桑尼亞</string>
+	<string name="Country.Thailand">泰國</string>
+	<string name="Country.Togo">多哥</string>
+	<string name="Country.Trinidad and Tobago">Qiānlǐdá-Tuōbāgē</string>
+	<string name="Country.Turkey">土耳其</string>
+	<string name="Country.Turkmenistan">Tǔkùmàn</string>
+	<string name="Country.Tuvalu">吐瓦魯</string>
+	<string name="Country.Uganda">烏干達</string>
+	<string name="Country.Ukraine">烏克蘭</string>
+	<string name="Country.United Arab Emirates">Ālābó liánhé qiúzhǎngguó' 阿拉伯联合酋长国 or</string>
+	<string name="Country.United Kingdom">Yīngguó</string>
+	<string name="Country.United Kingdom of Great Britain and Northern Ireland">大不列顛及北愛爾蘭聯合王國</string>
+	<string name="Country.United States of America">Měilìjiān hézhòngguó</string>
+	<string name="Country.United States Virgin Islands">美属处女岛</string>
+	<string name="Country.Uruguay">烏拉圭</string>
+	<string name="Country.Uzbekistan">Wūzībiékè</string>
+	<string name="Country.Vanuatu">Wànnǎdù</string>
+	<string name="Country.Vatican City">梵蒂岡</string>
+	<string name="Country.Venezuela">委內瑞拉</string>
+	<string name="Country.Vietnam">越南</string>
+	<string name="Country.Wales">威爾斯</string>
+	<string name="Country.Wallis and Futuna">Wǎlìsī jí Fùtúnà qúndǎo</string>
+	<string name="Country.Western Sahara">西撒哈拉</string>
+	<string name="Country.Yemen">Yèmén</string>
+	<string name="Country.Zambia">Zànbǐyà</string>
+	<string name="Country.Zimbabwe">Jīnbābùwéi</string>
 </resources>
