--- a/Language/strings_pt_BR.xml
+++ b/Language/strings_pt_BR.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+﻿<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.Search">Procurar</string>
   <string name="Webradio.Filter.Clear">Limpo</string>
